dons de classe 08

--- a/data/feats/class-08-TOyqtUUnOkOLl1Pm.htm
+++ b/data/feats/class-08-TOyqtUUnOkOLl1Pm.htm
@@ -1,13 +1,12 @@
 Name: Eclectic Skill
 Nom: Compétence éclectique
 PrereqEN: polymath muse|master in Occultism
-PrereqFR: muse touche-à-tout, maître en Occultisme
-État: changé
-État d'origine: officielle
+PrereqFR: muse touche-à-tout|maître en Occultisme
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your broad experiences translate to a range of skills.
-Avantage: Vos vastes expériences se traduisent par un éventail de compétences.
+Avantage: Vous pouvez faire des tests de compétence en étant inexpérimenté.
 
 ------ Description (en) ------
 <p>Your broad experiences translate to a range of skills.</p>
