--- a/data/feats/class-08-V9kShXu84NlORfcg.htm
+++ b/data/feats/class-08-V9kShXu84NlORfcg.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You toss your friends around the battlefield.
-Avantage: Vous lancez vos amis sur le champ de bataille.
+Avantage: Vous lancez vos amis sur le champ de bataille pour qu'il puisse aussitôt Frapper un adversaire.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are adjacent to an ally and have one or <br />more hands free.</p>
@@ -17,4 +17,4 @@ Avantage: Vous lancez vos amis sur le champ de bataille.
 <p><strong>Condition</strong> vous êtes adjacent à un allié et avez au moins une main libre.</p>
 <hr />
 <p>Vous lancez vos amis sur le champ de bataille. Attrapez un allié adjacent de votre taille ou de taille inférieure et lancez le dans une case inoccupée que vous pouvez voir dans les 9 m. Son déplacement ne provoque pas de réactions.</p>
-<p>Votre allié termine ce déplacement sur ses pieds et ne subit pas de dégâts de la chute. Si votre allié termine son mouvement à portée d'au moins un ennemi, il peut faire une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} de corps-à-corps contre un ennemi dans son allonge par une réaction.</p>
+<p>Votre allié termine ce déplacement sur ses pieds et ne subit pas de dégâts de chute. Si votre allié termine son mouvement à portée d'au moins un ennemi, il peut utiliser une réaction pour faire une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} de corps-à-corps contre un ennemi dans son allonge .</p>
