--- a/data/feats/class-08-VKNxblSUxYXQYlLr.htm
+++ b/data/feats/class-08-VKNxblSUxYXQYlLr.htm
@@ -2,14 +2,12 @@ Name: Terrain Master
 Nom: Maître de l'environnement
 PrereqEN: |master in Survival|Favored Terrain
 PrereqFR: maître en Survie|Environnement de prédilection
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You adapt to your surroundings in any natural terrain.
-Avantage: Vous vous adaptez à votre environnement sur n'importe quel terrain naturel.
------- Benefits and spoiler ----
-Avantage: Vous vous adaptez à votre environnement sur n'importe quel terrain naturel.
+Avantage: Après une heure sur un terrain, vous pouvez l'adopter temporairement comme environnement de prédilection.
+
 ------ Description (en) ------
 <p>You adapt to your surroundings in any natural terrain. You can spend 1 hour practicing in your current terrain in order to make it your @Compendium[pf2e.feats-srd.sgo7J9BVofBqwlsF]{Favored Terrain}, replacing your current favored terrain temporarily. If you spend a full day out of the new favored terrain, your favored terrain reverts back to your original choice when you took the Favored Terrain feat.</p>
 ------ Description (fr) ------
