--- a/data/feats/class-08-vhHKUooXX3PYqGaU.htm
+++ b/data/feats/class-08-vhHKUooXX3PYqGaU.htm
@@ -2,12 +2,11 @@ Name: Bond Conservation
 Nom: Conservation du lien
 PrereqEN: arcane bond
 PrereqFR: lien arcanique
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: By carefully manipulating the arcane energies stored in your bonded item as you drain it, you can conserve just enough power to cast another, slightly weaker spell.
-Avantage: En manipulant soigneusement les énergies arcaniques stockées dans votre objet lié lorsque vous le videz, vous pouvez conserver juste assez de puissance pour lancer un autre sort, légèrement plus faible.
+Avantage: Drain d’objet lié peut être utilisé une fois de plus avec un sort de 2 niveaux inférieurs au premier. 
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> The last action you used was Drain Bonded Item.</p>
