--- a/data/feats/class-08-wNHUryoRzlfDCFAd.htm
+++ b/data/feats/class-08-wNHUryoRzlfDCFAd.htm
@@ -2,12 +2,11 @@ Name: Soaring Shape
 Nom: Morphologie volante
 PrereqEN: Wild Shape
 PrereqFR: Morphologie sauvage
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Wings free you from the shackles of the ground below.
-Avantage: Les ailes vous libèrent des chaînes du sol.
+Avantage: Vous ajoutez les formes volantes au sort Forme aérienne.
 
 ------ Description (en) ------
 <p>Wings free you from the shackles of the ground below.</p>
