--- a/data/feats/class-08-VZczZNj3ozCj1Lzk.htm
+++ b/data/feats/class-08-VZczZNj3ozCj1Lzk.htm
@@ -6,7 +6,7 @@ PrereqFR: allié divin
 
 ------ Benefits and spoiler ----
 Benefits: Your inner grace attracts the attention of a second protective spirit.
-Avantage: Votre grâce intérieure attire l'attention d'un second esprit protecteur.
+Avantage: Vous obtenez un second allié divin.
 
 ------ Description (en) ------
 <p>Your inner grace attracts the attention of a second protective spirit. Choose a second type of divine ally and gain its benefits.</p>
