--- a/data/feats/class-08-tPb0FVkNDE89ACbC.htm
+++ b/data/feats/class-08-tPb0FVkNDE89ACbC.htm
@@ -1,13 +1,12 @@
 Name: Incredible Familiar (Witch)
 Nom: Formidable familier (Sorcière)
 PrereqEN: Enhanced Familiar
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Familier amélioré
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your familiar is imbued with even more magic than other familiars.
-Avantage: Votre familier est imprégné d'encore plus de magie que les autres familiers.
+Avantage: Le nombre de capacités de base de votre failier passe à six.
 
 ------ Description (en) ------
 <p>Your familiar is imbued with even more magic than other familiars. You can select a base of six familiar or master abilities each day, instead of four.</p>
