--- a/data/feats/class-08-u2rvvAqZBugZgcYg.htm
+++ b/data/feats/class-08-u2rvvAqZBugZgcYg.htm
@@ -2,16 +2,15 @@ Name: Greater Cruelty
 Nom: Cruauté supérieure
 PrereqEN: Cruelty
 PrereqFR: Cruauté
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: The extent of the corruption within you does more than simply sap your foes' strength, it devastates their minds and reflexes.
-Avantage: L’étendue de la corruption en vous fait plus que simplement saper la force de vos ennemis, elle dévaste leur esprit et leurs réflexes.
+Avantage: Cruauté vous permet de rendre la créature Affaiblie ou Stupéfiée.
 
 ------ Description (en) ------
 <p>The extent of the corruption within you does more than simply sap your foes' strength, it devastates their minds and reflexes.</p>
 <p>When you use @Compendium[pf2e.feats-srd.vxA0VRN10OwUkGAr]{Cruelty}, choose whether you want to make the creature enfeebled as normal, to make it @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Clumsy} 1 on a failed save (clumsy 2 on a critical failure), or to make it @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} 1 on a failed save (stupefied 2 on a critical failure).</p>
 ------ Description (fr) ------
 <p>L'extension de votre corruption fait plus que simplement saper la force de votre adversaire, elle dévaste leurs esprits et émousse leurs réflexes.</p>
-<p>Lorsque vous utilisez Cruauté, choisissez si vous voulez rendre la créature affaiblie comme à l'ordinaire ou la rendre @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroite} 1 en cas d'échec au jet de sauvegarde (Maladroite 2 en cas d'échec critique) ou si vous voulez la rendre @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfiée} 1 en cas d'échec du jet de sauvegarde (Stupéfiée 2 sur un échec critique).</p>
+<p>Lorsque vous utilisez Cruauté, choisissez si vous voulez rendre la créature Affaiblie comme à l'ordinaire ou la rendre @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroite} 1 en cas d'échec au jet de sauvegarde (Maladroite 2 en cas d'échec critique) ou si vous voulez la rendre @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfiée} 1 en cas d'échec du jet de sauvegarde (Stupéfiée 2 sur un échec critique).</p>
