--- a/data/feats/class-08-uR44wELN9OlU68cL.htm
+++ b/data/feats/class-08-uR44wELN9OlU68cL.htm
@@ -2,12 +2,11 @@ Name: Advanced Domain
 Nom: Domaine avancé
 PrereqEN: Domain Initiate
 PrereqFR: Initié du domaine
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your studies or prayers have unlocked deeper secrets of your deity’s domain.
-Avantage: Vos études ou vos prières ont permis de percer les secrets les plus profonds du domaine de votre divinité.
+Avantage: Vous obtenez un sort de domaine avancé de l’un de vos domaines.
 
 ------ Description (en) ------
 <p>Your studies or prayers have unlocked deeper secrets of your deity's domain. You gain an advanced domain spell from one of your domains (as listed in Table 8-2: Domains on page 441). Increase the number of Focus Points in your focus pool by 1.</p>
