--- a/data/feats/class-08-vayNZR1bTzU1oUa3.htm
+++ b/data/feats/class-08-vayNZR1bTzU1oUa3.htm
@@ -2,12 +2,11 @@ Name: Share Rage
 Nom: Rage partagée
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You stoke an ally’s fury.
-Avantage: Tu attises la colère d'un allié.
+Avantage: Vous permettez à un allié d'entrer en Rage.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You haven't used this ability since you last Raged.</p>
