--- a/data/feats/class-08-x9cYkB8DrUBBwqJd.htm
+++ b/data/feats/class-08-x9cYkB8DrUBBwqJd.htm
@@ -2,14 +2,12 @@ Name: Ironblood Stance
 Nom: Posture du sang-de-fer
 PrereqEN: |You are unarmored
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You enter the stance of impenetrable iron, refusing to yield to any blow.
 Avantage: Vous adoptez la posture du fer impénétrable, refusant de céder à tout coup.
------- Benefits and spoiler ----
-Avantage: Vous adoptez la posture du fer impénétrable, refusant de céder à tout coup.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are unarmored</p>
 <hr />
@@ -19,6 +17,7 @@ Avantage: Vous adoptez la posture du fer impénétrable, refusant de céder à t
 <p>@Compendium[pf2e.equipment-effects.fRlvmul3LbLo2xvR]{Effect: Parry}</p>
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous ne portez aucune armure</p>
-<hr>
+<hr />
 <p>Vous prenez la posture du fer impénétrable, en refusant de céder sous les coups. Vous pouvez faire des attaques à mains nues de balayage de fer. Ces attaques infligent 1d8 dégâts contondants, elles font partie du groupe pugilat et possèdent les traits balayage, mains nues, non létal et parade. Tant que vous gardez la Posture du sang-de-fer, vous bénéficiez d’une résistance 2 à tous les dégâts. La résistance passe à 3 au niveau 12, 4 au niveau 16 et 5 au niveau 20.</p>
 <p>@Compendium[pf2e.feat-effects.tPKXLtDJ3bzJcXlv]{Posture: Posture du sang-de-fer}</p>
+<p>@Compendium[pf2e.equipment-effects.fRlvmul3LbLo2xvR]{Effet: Parade}</p>
