--- a/data/equipment/consumable-17-qvAtAv211cVqktgU.htm
+++ b/data/equipment/consumable-17-qvAtAv211cVqktgU.htm
@@ -15,7 +15,7 @@ Nom: Tord-boyaux vert
 Cet émétique aqueux, vert menthe, de conception Xulgath, est souvent transporté dans une délicate fiole d'obsidienne ou un autre récipient fragile.
 <p>Dans le cas malheureux où une créature a été entièrement avalée par une autre créature, la créature avalée peut ouvrir une fiole de tord-boyaux vert pour provoquer immédiatement le vomissement.</p>
 <p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>>
-<p>L'avaleur doit réussir une sauvegarde de Force DD 40 ou subir [[/r 18d6#poison]] de dégâts de poison et éventuellement vomir le contenu de son estomac.</p>
+<p>L'avaleur doit réussir une sauvegarde de Vigueur DD 40 ou subir [[/r 18d6#poison]] dégâts de poison et éventuellement vomir le contenu de son estomac.</p>
 <p><strong>Succès critique</strong> La créature n'est pas affectée.</p>
 <p><strong>Réussite</strong> La créature subit la moitié des dégâts.</p>
 <p><strong>Échec</strong> La créature subit tous les dégâts, est @Compendium[pf2e.conditionitems.fesd1n5eVhpCSS18]{Malade} 1, et vomit toutes les créatures avalées entières à son prochain tour (une action unique, qui lui permet également d'effectuer un test de résistance contre la maladie), ainsi que toutes les pierres ou tous les autres objets qu'elle a avalés.</p>
