--- a/data/equipment/consumable-01-wbr6rkyaVYnDhdgV.htm
+++ b/data/equipment/consumable-01-wbr6rkyaVYnDhdgV.htm
@@ -1,7 +1,6 @@
 Name: Cognitive Mutagen (Lesser)
 Nom: Mutagène cognitif (Inférieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
