--- a/data/equipment/consumable-03-qpzL9UnTi4cDhy6J.htm
+++ b/data/equipment/consumable-03-qpzL9UnTi4cDhy6J.htm
@@ -1,7 +1,6 @@
 Name: Cognitive Mutagen (Moderate)
 Nom: Mutagène cognitif (modéré)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
