--- a/data/equipment/consumable-18-p3ppzFSsZXFRe3H8.htm
+++ b/data/equipment/consumable-18-p3ppzFSsZXFRe3H8.htm
@@ -1,7 +1,6 @@
 Name: Healing Potion (Major)
 Nom: Potion de guérison (majeure)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A healing potion is a vial of a ruby-red liquid that imparts a tingling sensation as the drinker's wounds heal rapidly. When you drink a healing potion, you regain [[/r 8d8+30]] Hit Points.</p>
