--- a/data/equipment/consumable-06-G7haQ5gDt30ftJLC.htm
+++ b/data/equipment/consumable-06-G7haQ5gDt30ftJLC.htm
@@ -1,7 +1,6 @@
 Name: Healing Potion (Moderate)
 Nom: Potion de guérison (modéré)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A healing potion is a vial of a ruby-red liquid that imparts a tingling sensation as the drinker's wounds heal rapidly. When you drink a healing potion, you regain [[/r 3d8+10]] Hit Points.</p>
