--- a/data/equipment/consumable-03-e0vSAQfxhHauiAoD.htm
+++ b/data/equipment/consumable-03-e0vSAQfxhHauiAoD.htm
@@ -1,7 +1,6 @@
 Name: Healing Potion (Lesser)
 Nom: Potion de guérison (inférieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A healing potion is a vial of a ruby-red liquid that imparts a tingling sensation as the drinker's wounds heal rapidly. When you drink a healing potion, you regain [[/r 2d8+5]] Hit Points.</p>
