--- a/data/equipment/consumable-01-2RuepCemJhrpKKao.htm
+++ b/data/equipment/consumable-01-2RuepCemJhrpKKao.htm
@@ -1,7 +1,6 @@
 Name: Healing Potion (Minor)
 Nom: Potion de guérison (Mineure)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>A healing potion is a vial of a ruby-red liquid that imparts a tingling sensation as the drinker's wounds heal rapidly. When you drink a healing potion, you regain [[/r 1d8]] Hit Points.</p>
