révision dons de classe 08 fin

--- a/data/feats/class-08-zf6Poru1jNmrO3kk.htm
+++ b/data/feats/class-08-zf6Poru1jNmrO3kk.htm
@@ -6,9 +6,9 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Your magical blood makes you more resistant to magic.
-Avantage: Votre sang magique vous rend plus résistant à la magie.
+Avantage: Vous obtenez un bonus de statut de +1 à vos jets de sauvegarde contre les sorts et les effets magiques.
 
 ------ Description (en) ------
 <p>Your magical blood makes you more resistant to magic. You gain a +1 status bonus to saving throws against spells and magical effects.</p>
 ------ Description (fr) ------
-<p>Votre sang magique vous permet de mieux résister à la magie. Vous bénéficiez d’un bonus de statut de +1 à vos jets de sauvegarde contre les sorts et les effets magiques</p>
+<p>Votre sang magique vous permet de mieux résister à la magie. Vous bénéficiez d’un bonus de statut de +1 à vos jets de sauvegarde contre les sorts et les effets magiques.</p>
