--- a/data/feats/class-08-YeyOqNFKaeuOTiJr.htm
+++ b/data/feats/class-08-YeyOqNFKaeuOTiJr.htm
@@ -2,8 +2,7 @@ Name: Impassable Wall Stance
 Nom: Posture du mur infranchissable
 PrereqEN: Attack of Opportunity
 PrereqFR: Attaque d'opportunité
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You refuse to let foes past your guard.
@@ -12,4 +11,4 @@ Avantage: Vous refusez de laisser les ennemis passer votre garde.
 ------ Description (en) ------
 <p>You refuse to let foes past your guard. As long as you are in this stance, when you critically hit with an @Compendium[pf2e.feats-srd.O2MwufzEHbuThoGr]{Attack of Opportunity} triggered by a move action, you disrupt that move action.</p>
 ------ Description (fr) ------
-<p>Vous refusez de laisser des adversaires passer votre position. Tant que vous êtes dans cette posture, lorsque vous obtenez une réussite critique avec une Attaque d'opportunité déclenchée par une action de déplacement, vous interrompez cette action.</p>
+<p>Vous refusez de laisser des adversaires passer votre position. Tant que vous êtes dans cette posture, lorsque vous obtenez une réussite critique avec une @Compendium[pf2e.feats-srd.O2MwufzEHbuThoGr]{Attaque d'opportunité} déclenchée par une action de déplacement, vous interrompez cette action.</p>
