--- a/data/feats/class-08-Yw0qVCDu94Y5TgxQ.htm
+++ b/data/feats/class-08-Yw0qVCDu94Y5TgxQ.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You somehow manage to have just the thing for the situation.
-Avantage: Vous arrivez toujours à avoir ce qu'il faut pour la situation.
+Avantage: Vous obtenez les dons Planificateur prescient et Consommable prescient.
 
 ------ Description (en) ------
 <p>You somehow manage to have just the thing for the situation. You gain the @Compendium[pf2e.feats-srd.bh2jHyyYrkLMsIdX]{Prescient Planner} and @Compendium[pf2e.feats-srd.lHFz4MmebvPqTb0A]{Prescient Consumable} feats.</p>
