--- a/data/feats/class-08-ZdL8pPPV0QCkBML1.htm
+++ b/data/feats/class-08-ZdL8pPPV0QCkBML1.htm
@@ -2,20 +2,20 @@ Name: Subtle Shank
 Nom: Surin subtil
 PrereqEN: 
 PrereqFR: Arme en main
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You draw a concealed weapon, attack with it, and then hide it away again in one smooth motion.
-Avantage: Vous sortez une arme cachée, vous attaquez avec, puis vous la cachez à nouveau en un seul geste.
+Avantage: Vous Prenez au dépourvu la cible en sortant une arme dissimulée.
 SpoilersEN: Agents of Edgewatch
-SpoilersFR: 
+SpoilersFR: Agents de la Garde du précipice
 
 ------ Description (en) ------
 <p><strong>Access</strong> Help either the Washboard Dogs or the Diobel Sweepers destroy their rival. <br /><strong>Requirements</strong> You have a melee weapon of light bulk @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed} on your person via the Stealth skill, and the target isn't aware of it.<br /></p>
 <hr />
 <p>You draw a concealed weapon, attack with it, and then hide it away again in one smooth motion. Interact to draw the weapon, Strike with that weapon, and then Conceal it with a Stealth check. The target is @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} for this attack.</p>
 ------ Description (fr) ------
-<p><strong>Accès</strong> Aider soit les Chiens de la laverie soit les Balayeurs de Diobel à détruire leurs rivaux.</p> <p><strong>Conditions</strong> Vous avez un arme de corps à corps d'Encombrement léger @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]Masquée} sur votre personne à l'aide d'un test de Discrétion et la cible n'en est pas consciente.</p>
+<p><strong>Accès</strong> Aider soit les Chiens de la laverie soit les Balayeurs de Diobel à détruire leurs rivaux.</p>
+<p><strong>Conditions</strong> Vous avez un arme de corps à corps d'Encombrement léger @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]Masquée} sur votre personne à l'aide d'un test de Discrétion et la cible n'en est pas consciente.</p>
 <hr>
-<p>Vous tirez l'arme camouflée et attaquer avec puis la cachez de nouveau en un mouvement rapide. Interagissez pour tirer l'arme, Frapper avec l'arme et puis la Dissimuler avec un test de Discrétion. La cible est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu} pour cette attaque.</p>
+<p>Vous tirez l'arme camouflée et vous attaquez avec avant de la cacher de nouveau d'un mouvement rapide. Interagissez pour tirer l'arme, Frappez avec l'arme et Dissimulez là avec un test de Discrétion. La cible est @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu} pour cette attaque.</p>
