--- a/data/feats/class-08-y2XeMe1F18lIyo59.htm
+++ b/data/feats/class-08-y2XeMe1F18lIyo59.htm
@@ -6,7 +6,7 @@ PrereqFR: maître en Perception
 
 ------ Benefits and spoiler ----
 Benefits: Your battle instincts make you more aware of concealed and invisible opponents.
-Avantage: Votre instinct de combattant vous rend plus conscient des adversaires cachés et invisibles.
+Avantage: Vous n'êtes pas Pris au dépourvu par les adversaires cachés ou invisibles.
 
 ------ Description (en) ------
 <p>Your battle insights make you more aware of concealed and invisible opponents. You don't need to succeed at a flat check to target @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Concealed} creatures.</p>
@@ -14,5 +14,5 @@ Avantage: Votre instinct de combattant vous rend plus conscient des adversaires 
 <p>While you're adjacent to an @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Undetected} creature of your level or lower, it is instead only hidden from you.</p>
 ------ Description (fr) ------
 <p>Vos intuitions dans la bataille vous rendent plus attentifs à vos opposants masqués ou invisibles. Vous n'avez pas besoin de réussir de test nu pour cibler les créatures @Compendium[pf2e.conditionitems.DmAIPqOBomZ7H95W]{Masquées}.</p>
-<p>Vous n'êtes pas @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} face aux créatures qui vous sont @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Cachées} (à moins que vous ne soyez Pris au dépourvu pour d'autres raisonsque celle liée à la condition Cachée) et nous n'avez besoin suelument que d'un test nu réussi contre un DD5 pour cibler une créature cachée.</p>
-<p>Lorsque vous êtes adjacent à une créature @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Non détectée} de votre niveau ou plus faible, vous considérez qu'elle vous est à la place seulement Cachée.</p>
+<p>Vous n'êtes pas @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} face aux créatures qui vous sont @Compendium[pf2e.conditionitems.iU0fEDdBp3rXpTMC]{Cachées} (à moins que vous ne soyez Pris au dépourvu pour d'autres raisons que celle liée à la condition Cachée) et nous n'avez besoin seulument que d'un test nu réussi contre un DD5 pour cibler une créature Cachée.</p>
+<p>Lorsque vous êtes adjacent à une créature @Compendium[pf2e.conditionitems.VRSef5y1LmL2Hkjf]{Non détectée} de votre niveau ou plus faible, vous considérez qu'elle vous est à seulement Cachée.</p>
