--- a/data/feats/class-08-yTUIiE9LXBZaA7aG.htm
+++ b/data/feats/class-08-yTUIiE9LXBZaA7aG.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You carefully consider your case and narrow down some of the details.
-Avantage: Vous examinez attentivement votre cas et réduisez certains détails.
+Avantage: Une fois par jour, vous pouvez poser deux questions au MJ sur votre piste.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per day</p>
@@ -25,12 +25,12 @@ Avantage: Vous examinez attentivement votre cas et réduisez certains détails.
 <p><strong>Fréquence</strong> une fois par jour</p>
 <hr />
 <p>Vous considérez avec soin votre affaire et éliminez certains des détails. Lorsque vous @Compendium[pf2e.actionspf2e.xTK2zsWFyxSJvYbX]{Suivez une piste}, vous pouvez passer 10 minutes au lieu d'une minute pour poser deux questions au MJ lorsque vous terminez cette activité.</p>
-<p>Le MJ doit répondre loyalement par “oui” ou “non” mais si la réponse devrait être une fausse piste ou n'aurait pas d'application pratique pour votre enquête, le MJ peut répondre “immatériel.” Vous ne pouvez pas utiliser <em>Quiafaitçà ?</em> plus d'une fois pour la même piste, même au sur plusieurs jours différents.</p>
+<p>Le MJ doit répondre loyalement par “oui” ou “non” mais si la réponse devrait être une fausse piste ou n'aurait pas d'application pratique pour votre enquête, le MJ peut répondre “immatériel.” Vous ne pouvez pas utiliser <em>Quiafaitçà ?</em> plus d'une fois pour la même piste, même au cours de plusieurs jours différents.</p>
 <p>Vos questions doivent provenir de la liste suivante, en l'appliquant soit à la créature, soit à l'indice que vous avez découvert :</p>
 <ul>
-<li>L'indice a t'il été laissé par un [trait de créature]? (Choisissez un trait de créature tel que humanoïde, mort-vivant ou nain ; ce trait doit être exact au moment où l'indice a été laissé.)</li>
-<li>Cet indice a t'il été laissé au cours de la dernière heure ?</li>
-<li>Cet indice a t'il été laissé au cours de la dernière journée ?</li>
-<li>La créature qui a laissé cet indice était elle dans un été émotionnel intense lorsque l'indice a été laissé ?</li>
-<li>La créature a t'elle tenté de cacher cet indice ?</li>
+<li>L'indice a-t-il été laissé par un [trait de créature] ? (Choisissez un trait de créature tel que humanoïde, mort-vivant ou nain ; ce trait doit être exact au moment où l'indice a été laissé.)</li>
+<li>Cet indice a-t-il été laissé au cours de la dernière heure ?</li>
+<li>Cet indice a-t-il été laissé au cours de la dernière journée ?</li>
+<li>La créature qui a laissé cet indice était-t-elle dans un été émotionnel intense lorsque l'indice a été laissé ?</li>
+<li>La créature a-t-elle tenté de cacher cet indice ?</li>
 </ul>
