--- a/data/feats/class-08-zXKfKKOxht0b0XNL.htm
+++ b/data/feats/class-08-zXKfKKOxht0b0XNL.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You mix in an additive to make your bomb’s contents adhere to the target and continue to deal damage.
-Avantage: Vous ajoutez un additif pour que le contenu de votre bombe adhère à la cible et continue à faire des dégâts.
+Avantage: Votre bombe inflige des dégâts persistants à sa cible primaire.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
