--- a/data/equipment/consumable-04-3Fmbw9wJkqZBV9De.htm
+++ b/data/equipment/consumable-04-3Fmbw9wJkqZBV9De.htm
@@ -1,13 +1,12 @@
 Name: Feather Token (Fan)
 Nom: Plume magique (éventail)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><span>Each feather token appears to be a simple feather from some exotic bird. The feather's shaft, dipped in gold, bears a single arcane rune. Activating a feather token causes it to transform into another object, which then can be used as normal for that object. Each feather can be activated only once, with most of them permanently becoming the item in their description.<br /></span></p>
 <p><span><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</span></p>
 <p><span>Activating this feather requires you to fan it in a given direction. If this direction is toward the sail of a vessel, the feather flutters up toward the sail and fans continuously, filling the sail with air and granting the vessel a +10-foot circumstance bonus to its Speed for 8 hours. If fanned in any other direction, it instead produces a single casting of @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{Gust of Wind} (DC 20).</span></p>
 ------ Description (fr) ------
-<p><span>Chaque plume magique semble être une simple plume d’oiseau exotique. La tige, plaquée or, porte une unique rune arcanique. Une fois activée, la plume magique se transforme en un autre objet qui s’utilise alors normalement. Chaque plume s’active une seule fois et reste généralement sous la forme de l’objet en lequel elle s’est changée. <br /></span></p>
-<p><span><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</span></p>
-<p><span>Pour activer cette plume, vous devez l’agiter comme un éventail en direction de quelque chose. S’il s’agit d’une voile de navire, la plume s’envole vers la voile et continue de s’agiter, gonflant la toile et donnant au bateau un bonus de circonstances de +3 mètres à sa Vitesse pendant 8 heures. Si vous l’agitez en direction d’autre chose, elle produit une unique incantation de @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{bourrasque} (DD 20).</span></p>
+<p>Chaque plume magique semble être une simple plume d’oiseau exotique. La tige, plaquée or, porte une unique rune arcanique. Une fois activée, la plume magique se transforme en un autre objet qui s’utilise alors normalement. Chaque plume s’active une seule fois et reste généralement sous la forme de l’objet en lequel elle s’est changée.</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p>Pour activer cette plume, vous devez l’agiter comme un éventail en direction de quelque chose. S’il s’agit d’une voile de navire, la plume s’envole vers la voile et continue de s’agiter, gonflant la toile et donnant au bateau un bonus de circonstances de +3 mètres à sa Vitesse pendant 8 heures. Si vous l’agitez en direction d’autre chose, elle produit une unique incantation de @Compendium[pf2e.spells-srd.g8QqHpv2CWDwmIm1]{bourrasque} (DD 20))</p>
