--- a/data/equipment/consumable-01-3V2U720YhW2nyGVx.htm
+++ b/data/equipment/consumable-01-3V2U720YhW2nyGVx.htm
@@ -1,7 +1,6 @@
 Name: Spike Snare
 Nom: Piège artisanal à pointes
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This basic snare consists of hidden spikes that rely on a creature's momentum to lacerate or potentially impale it as it enters the snare's square, dealing 2d8 piercing damage. The creature must attempt a DC 17 basic Reflex saving throw.</p>
