--- a/data/equipment/consumable-16-kicNrnZz1KjJYRVI.htm
+++ b/data/equipment/consumable-16-kicNrnZz1KjJYRVI.htm
@@ -1,7 +1,6 @@
 Name: Eagle Eye Elixir (Major)
 Nom: Élixir d'œil de faucon (majeur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
@@ -9,6 +8,6 @@ Nom: Élixir d'œil de faucon (majeur)
 <p>Each time you pass within 10 feet of a secret door or trap, the GM automatically rolls a secret check for you to find it.</p>
 <p>@Compendium[pf2e.consumable-effects.wyLEew86nhNUXASu]{Effect: Eagle Eye Elixir (Major)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 <p>Une fois que vous avez bu cet élixir, vous remarquez des détails visuels subtils. Pendant l’heure qui suit, vous gagnez un bonus d’objet de +3 aux tests de Perception. Il est de +4 si vous tentez de repérer une porte secrète et des pièges. À chaque fois que vous passez à 3 m d’une porte dérobée ou d’un piège, le MJ fait automatiquement un test en secret pour savoir si vous la repérez.</p>
-<p>@Compendium[pf2e.spell-effects.wyLEew86nhNUXASu]{Effet: Élixir d'œil du faucon (Majeur)}</p>
+<p>@Compendium[pf2e.spell-effects.wyLEew86nhNUXASu]{Effet: Élixir d'œil du faucon (majeur)}</p>
