--- a/data/equipment/consumable-01-AFX1V0Go9DqPWBlN.htm
+++ b/data/equipment/consumable-01-AFX1V0Go9DqPWBlN.htm
@@ -1,7 +1,6 @@
 Name: Alarm Snare
 Nom: Piège artisanal d'alarme
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You create an alarm snare by rigging one or more noisy objects to a trip wire or pressure plate. When you create an alarm snare, you designate a range between 100 to 500 feet at which it can be heard. When a Small or larger creature enters the square, the snare makes a noise loud enough that it can be heard by all creatures in the range you designated.</p>
