--- a/data/equipment/consumable-01-clyXfh0aVXgij2Hb.htm
+++ b/data/equipment/consumable-01-clyXfh0aVXgij2Hb.htm
@@ -10,6 +10,7 @@ Nom: Croc de loup
 <p>This wolf canine is bound in a strip of leather and tied to a buckle or strap of a suit of armor.</p>
 <p>When you activate the fang, you deal bludgeoning damage equal to your Strength modifier to the target of your Trip. If your Trip would already deal physical damage that doesn't include an ability modifier, add your Strength modifier to that damage.</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">F</span> Imaginer</p>
-<p><span>Cette canine de loup est attachée sur un lien de cuir fixé sur une boucle ou une lanière d’armure. Lorsque vous l’activez, vous infligez des dégâts contondants égaux à votre modificateur de Force à la cible de votre Croc‑en‑Jambe. Si ce Croc‑en‑Jambe devrait déjà inclure des dégâts physiques ne comprenant pas de modificateur de caractéristique, ajoutez‑leur votre modificateur de Force.<br /></span></p>
-<strong>Déclencheur</strong> Votre Croc‑en‑Jambe est couronné de succès ;<strong>Conditions</strong> Vous êtes qualifié en Athlétisme. </span></p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Imaginer</p>
+<p>Cette canine de loup est attachée sur un lien de cuir fixé sur une boucle ou une lanière d’armure. Lorsque vous l’activez, vous infligez des dégâts contondants égaux à votre modificateur de Force à la cible de votre Croc‑en‑Jambe. Si ce Croc‑en‑Jambe devrait déjà inclure des dégâts physiques ne comprenant pas de modificateur de caractéristique, ajoutez‑leur votre modificateur de Force.</p>
+<p><strong>Déclencheur</strong> Votre Croc‑en‑Jambe est couronné de succès</p>
+<strong>Conditions</strong> Vous êtes qualifié en Athlétisme.</p>
