--- a/data/equipment/consumable-01-clyXfh0aVXgij2Hb.htm
+++ b/data/equipment/consumable-01-clyXfh0aVXgij2Hb.htm
@@ -1,7 +1,6 @@
 Name: Wolf Fang
 Nom: Croc de loup
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">F</span> Envision</p>
