dons de classe 10

--- a/data/feats/class-10-2Nu4ZdKQM8hx8x5D.htm
+++ b/data/feats/class-10-2Nu4ZdKQM8hx8x5D.htm
@@ -1,17 +1,14 @@
 Name: Sneak Savant
 Nom: Science de la Furtivité
 PrereqEN: master in Stealth
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: maître en Discrétion
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: It is almost impossible to spot you without taking effort to look.
-Avantage: Il est presque impossible de vous repérer sans faire l'effort de regarder.
+Avantage: Un échec pour être Furtif est considéré comme un succès.
 
 ------ Description (en) ------
 <p>It is almost impossible to spot you without taking effort to look. When you roll a failure on a Sneak action, you get a success instead. You can still critically fail.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> maître en Discrétion</p>
-<hr>
-<p> Vous êtes presque impossible à repérer sans effort. Quand vous obtenez un échec à une action pour Être furtif, celui-ci se transforme en réussite. Vous pouvez toujours obtenir un échec critique.</p>
+<p>Il est presque impossible de vous repérer sans faire l'effort de regarder. Quand vous obtenez un échec à une action pour Être furtif, celui-ci se transforme en succès. Vous pouvez toujours obtenir un échec critique.</p>
