--- a/data/feats/class-10-2OYJOFaEkhc8dFbl.htm
+++ b/data/feats/class-10-2OYJOFaEkhc8dFbl.htm
@@ -2,15 +2,13 @@ Name: Knockback Strike
 Nom: Frappe repoussante
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You focus your strength into a blow powerful enough to push an enemy away from you.
-Avantage: Vous concentrez votre force en un coup assez puissant pour repousser un ennemi.
------- Benefits and spoiler ----
-Avantage: Vous concentrez votre force en un coup assez puissant pour repousser un ennemi.
+Avantage: Une Frappe à mains nues réussie vous permet de pousser votre cible.
+
 ------ Description (en) ------
 <p>You focus your strength into a blow powerful enough to push an enemy away from you. Make an unarmed Strike. If you hit, attempt an Athletics check to @Compendium[pf2e.actionspf2e.7blmbDrQFNfdT731]{Shove} the target. This attack uses the same multiple attack penalty as your Strike, and doesn't count toward your multiple attack penalty.</p>
 ------ Description (fr) ------
-<p>Vous canalisez votre force pour porter un coup dont la puissance vous permet de repousser un ennemi. Faites une Frappe à mains nues. Si vous touchez, effectuez un test d’Athlétisme pour Pousser la cible. Cette attaque applique le même malus d’attaques multiples que votre Frappe et ne compte pas dans le calcul de votre malus d’attaques multiples.</p>
+<p>Vous concentrez votre force pour porter un coup suffisamment puissant pour repousser un ennemi. Faites une Frappe à mains nues. Si vous touchez, effectuez un test d’Athlétisme pour Pousser la cible. Cette attaque applique le même malus d’attaques multiples que votre Frappe et ne compte pas dans le calcul de votre malus d’attaques multiples.</p>
