--- a/data/feats/class-10-4IeAAmx2vZEHmRLX.htm
+++ b/data/feats/class-10-4IeAAmx2vZEHmRLX.htm
@@ -1,17 +1,14 @@
 Name: Witch's Communion
 Nom: Communion de la sorcière
 PrereqEN: Witch's Charge
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Fardeau de la sorcière
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can keep watch over multiple charges.
-Avantage: Vous pouvez surveiller plusieurs charges.
+Avantage: Vous pouvez utiliser Fardeau de la sorcière sur plusieurs cibles.
 
 ------ Description (en) ------
 <p>You can keep watch over multiple charges. Each day during your preparations, you can designate a number of charges equal to your Intelligence modifier instead of just one.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.52QyoGaysrfBOy5H]{Fardeau de la sorcière}</p>
-<hr>
 <p>Vous pouvez veiller sur de multiples fardeaux. Chaque jour, au cours de vos préparatifs quotidiens, vous pouvez désigner un nombre de fardeaux égal à votre modificateur d'Intelligence au lieu d'un seul.</p>
