--- a/data/equipment/consumable-15-AmxSqEoFhRLMYd1W.htm
+++ b/data/equipment/consumable-15-AmxSqEoFhRLMYd1W.htm
@@ -1,13 +1,12 @@
 Name: Elixir of Life (Major)
 Nom: Elixir de vie (majeur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>Elixirs of life accelerate a living creature's natural healing processes and immune system. Upon drinking this elixir, you regain [[/r 8d6+21]] Hit Points and gain +3 item bonus to saving throws against diseases and poisons for 10 minutes.</p>
 <p>@Compendium[pf2e.consumable-effects.PpLxndUSgzgs6dd0]{Effect: Elixir of Life (Major)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 L’élixir de vie accélère le processus de guérison naturel du corps et son système immunitaire. En le buvant, vous récupérez [[/r 8d6+21]] de vie et gagnez un bonus d’objet +3 aux jets de sauvegarde contre la maladie et le poison pendant 10 minutes.
-<p>@Compendium[pf2e.consumable-effects.PpLxndUSgzgs6dd0]{Effet: Elixir de vie (Majeur)}</p>
+<p>@Compendium[pf2e.consumable-effects.PpLxndUSgzgs6dd0]{Effet: Elixir de vie (majeur)}</p>
