--- a/data/equipment/consumable-13-mYozcVg9fQY6zO7C.htm
+++ b/data/equipment/consumable-13-mYozcVg9fQY6zO7C.htm
@@ -1,13 +1,12 @@
 Name: Elixir of Life (Greater)
 Nom: Elixir de vie (supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>Elixirs of life accelerate a living creature''s natural healing processes and immune system. Upon drinking this elixir, you regain [[/r 7d6+18]] Hit Points and gain +2 item bonus to saving throws against diseases and poisons for 10 minutes.</p>
 <p>@Compendium[pf2e.consumable-effects.Z9oPh462q82IYIZ6]{Effect: Elixir of Life (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
 L’élixir de vie accélère le processus de guérison naturel du corps et son système immunitaire. En le buvant, vous récupérez  [[/r 7d6+18]] points de vie indiqué et gagnez un bonus +2 d’objet aux jets de sauvegarde contre la maladie et le poison pendant 10 minutes. 
-<p>@Compendium[pf2e.consumable-effects.Z9oPh462q82IYIZ6]{Effect: Elixir de vie (Supérieure)}</p>
+<p>@Compendium[pf2e.consumable-effects.Z9oPh462q82IYIZ6]{Effect: Elixir de vie (supérieur)}</p>
