--- a/data/equipment/consumable-03-VISk5uLPVIvNWovB.htm
+++ b/data/equipment/consumable-03-VISk5uLPVIvNWovB.htm
@@ -1,5 +1,5 @@
 Name: Bestial Mutagen (Moderate)
-Nom: Mutagène bestiale (modéré)
+Nom: Mutagène bestial (modéré)
 État: officielle
 
 ------ Description (en) ------
