--- a/data/equipment/consumable-01-Km4lSOsyrip5q6iD.htm
+++ b/data/equipment/consumable-01-Km4lSOsyrip5q6iD.htm
@@ -1,7 +1,6 @@
 Name: Hampering Snare
 Nom: Piège artisanal ralentisseur
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>You arrange brambles, wires, sticky goo, or other materials to interfere with a creature's movement. The square with this snare, as well as three adjacent squares (to form a 10-foot-by-10-foot area), become difficult terrain when the first creature enters the snare's square. The difficult terrain affects the creature's movement right away, including its movement into the triggering square, and it lasts for 1d4 rounds after the snare is triggered. A creature can use an Interact action to clear the difficult terrain out of a single square early.</p>
