dons de classe de niveau 10

--- a/data/feats/class-10-6xBu4BewIkOIt9M0.htm
+++ b/data/feats/class-10-6xBu4BewIkOIt9M0.htm
@@ -2,12 +2,11 @@ Name: Cut From The Air
 Nom: Découper en l'air
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can knock aside ranged attacks.
-Avantage: Vous pouvez repousser les attaques à distance.
+Avantage: Vous déviez les attaques à distance des armes qui vous prennent pour cible.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are the target of a physical ranged Strike.</p>
@@ -18,6 +17,6 @@ Avantage: Vous pouvez repousser les attaques à distance.
 <p>@Compendium[pf2e.feat-effects.gWwG7MNAesJgpmRW]{Effect: Cut from the Air}</p>
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous êtes la cible d'une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} à distance physique.</p>
-<p><strong>Prérequis</strong> Vous êtes conscient de l'attaque, pas @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} à son encontre et vous avez soit une main libre, soit vous maniez une arme de mêlée.</p>
+<p><strong>Prérequis</strong> Vous êtes conscient de l'attaque, pas @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Pris au dépourvu} à son encontre et vous avez soit une main libre, soit vous maniez une arme au corps à corps.</p>
 <hr>
-<p>Vous pouvez écarter les attaques à distance. Vous obtenez un bonus de circonstances de +4 à la CA contre l'attaque déclencheuse. Si l'attaque vous manque, vous avez écarter ou l'avez découpé dans les airs.</p>
+<p>Vous pouvez écarter les attaques à distance. Vous obtenez un bonus de circonstances de +4 à la CA contre l'attaque déclencheuse. Si l'attaque vous manque, vous l'avez écartée ou l'avez découpée dans les airs.</p>
