--- a/data/feats/class-10-9kY9B5WgtEleOicn.htm
+++ b/data/feats/class-10-9kY9B5WgtEleOicn.htm
@@ -2,12 +2,11 @@ Name: Resounding Blow
 Nom: Coup retentissant
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You strike your enemy in the head with such force that their ears ring.
-Avantage: Vous frappez votre ennemi à la tête avec une telle force que ses oreilles bourdonnent.
+Avantage: Votre Frappe rend temporairement sourd votre adversaire 
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a melee weapon that deals <br />bludgeoning damage.</p>
@@ -16,4 +15,4 @@ Avantage: Vous frappez votre ennemi à la tête avec une telle force que ses ore
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous maniez une arme de mêlée qui inflige des dégâts contondants</p>
 <hr>
-<p>Vous frappez votre ennemi à la tête avec une telle force que ses oreilles sonnent. Faites une <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="VjxZFuUXrCU94MWR" draggable="true"><i class="fas fa-suitcase"></i> Frappe</a> de mêlée. Si cette frappe touche et inflige des dégâts, la cible est <a class="entity-link" data-pack="pf2e.conditionitems" data-id="9PR9y0bi4JPKnHPR" draggable="true"><i class="fas fa-book-open"></i> sourde</a> jusqu'au début de votre prochain tour (ou pendant 1 minute sur un coup critique).</p>
+<p>Vous frappez votre ennemi à la tête avec une telle force que ses oreilles bourdonnent. Faites une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} au corps-à-corps. Si cette Frappe touche et inflige des dégâts, la cible est @Compendium[pf2e.conditionitems.9PR9y0bi4JPKnHPR]{Sourde} jusqu'au début de votre prochain tour (ou pendant 1 minute en cas de coup critique).</p>
