--- a/data/feats/class-10-4VbfFPuFpbGLMMKF.htm
+++ b/data/feats/class-10-4VbfFPuFpbGLMMKF.htm
@@ -6,7 +6,7 @@ PrereqFR: qualifié en Athlétisme
 
 ------ Benefits and spoiler ----
 Benefits: After your initial attack redirects your foe’s defenses, your follow-up wrests their weapon from their grasp.
-Avantage: Après que votre attaque initiale ait redirigé les défenses de votre ennemi, votre suivi lui arrache son arme.
+Avantage: Votre Frappe vous permet de désarmer votre adversaire ou de le Prendre au dépourvu.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding only a single one-handed melee weapon and have your other hand or hands free.</p>
@@ -17,6 +17,6 @@ Avantage: Après que votre attaque initiale ait redirigé les défenses de votre
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous maniez une seule arme de corps à corps à une main et votre autre main (ou mains) est libre.</p>
 <hr />
-<p>Après avoir réorienté la défense de votre ennemi sur votre attaque initiale, vous enchaînez pour la forcer à lâcher son arme avec l’attaque suivante.</p>
+<p>Après avoir réorienté la défense de votre ennemi avec votre attaque initiale, vous enchaînez pour le forcer à lâcher son arme avec l’attaque suivante.</p>
 <p>Effectuez une Frappe au corps à corps avec l’arme requise. En plus de ses autres effets, cette Frappe obtient les effets de succès et de succès critique de l’action @Compendium[pf2e.actionspf2e.Dt6B1slsBy8ipJu9]{Désarmer}. La Frappe a également l’effet d’échec suivant.</p>
 <p><strong>Échec</strong> La cible est Prise au dépourvu jusqu’à la fin de votre tour actuel.</p>
