--- a/data/feats/class-10-647GZOyhWgcjw6Jg.htm
+++ b/data/feats/class-10-647GZOyhWgcjw6Jg.htm
@@ -1,20 +1,17 @@
 Name: Elucidating Mercy
 Nom: Soulagement clarifiant
 PrereqEN: Mercy
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Soulagement
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your mercy grants clarity to those around you just when they need it most.
-Avantage: Votre miséricorde apporte de la clarté à ceux qui vous entourent au moment où ils en ont le plus besoin.
+Avantage: Votre Soulagement contre les états Confus et Stupéfié.
 
 ------ Description (en) ------
 <p>Your mercy grants clarity to those around you just when they need it most.</p>
 <p>When you use @Compendium[pf2e.feats-srd.zilwynzk8lIujgZo]{Mercy}, you can instead attempt a counteract check to remove the @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confused} or @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupefied} conditions, using the source of that condition to determine the counteract level and DC.</p>
 <p>If the condition was caused by an ongoing effect and you don't remove that effect, the condition returns at the end of your next turn.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.zilwynzk8lIujgZo]{Soulagement}</p>
-<hr />
-<p>Votre soulagement apporte la clarté à ceux qui vous entourent lorsqu'ils en ont le plus besoin. Lordque vous utilisez Soulagement, vous pouvez à la place tenter un test pour contrer les conditions @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus} ou @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié}, en utilisant la source de cette condition pour déterminer le niveau et le DD du contre.</p>
+<p>Votre soulagement apporte la clarté à ceux qui vous entourent lorsqu'ils en ont le plus besoin. Lorsque vous utilisez @Compendium[pf2e.feats-srd.zilwynzk8lIujgZo]{Soulagement}, vous pouvez à la place tenter un test pour contrer les états @Compendium[pf2e.conditionitems.yblD8fOR1J8rDwEQ]{Confus} ou @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfié}, en utilisant la source de cette condition pour déterminer le niveau et le DD du contre.</p>
 <p>Si la condition était la conséquence d'un effet en cours et que vous n'avez pas dissipé cet effet, la condition se réinstalle à la fin de votre prochain tour.</p>
