--- a/data/feats/class-10-85V3vdew0gykEtmu.htm
+++ b/data/feats/class-10-85V3vdew0gykEtmu.htm
@@ -2,12 +2,11 @@ Name: Healing Transformation
 Nom: Transformation curative
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can take advantage of shapechanging magic to close wounds and patch injuries.
-Avantage: Vous pouvez tirer parti de la magie de changement de forme pour refermer les plaies et réparer les blessures.
+Avantage: Vous soignez les cibles que vous métamorphosez.
 
 ------ Description (en) ------
 <p>You can take advantage of shapechanging magic to close wounds and patch injuries. If your next action is to cast a non-cantrip polymorph spell that targets only one creature, your polymorph spell also restores 1d6 Hit Points per spell level to that creature. This is a healing effect.</p>
