--- a/data/feats/class-10-8NQaqtHheeMUNGYr.htm
+++ b/data/feats/class-10-8NQaqtHheeMUNGYr.htm
@@ -1,13 +1,14 @@
 Name: Shared Synergy
 Nom: Synergie partagée
 PrereqEN: Dualistic Synergy
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Synergie duale
+État: libre
+
+------ Benefits and spoiler ----
+Benefits: 
+Avantage: Un allié à 9 m bénéficie de votre Synergie duale.
 
 ------ Description (en) ------
 <p>You can grant the benefit from Dualistic Synergy to an ally within 30 feet instead of yourself, either allowing that ally to Recall Knowledge, granting that ally temporary Hit Points, or both, depending on the spell's tradition.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Synergie duale</p>
-<hr>
 <p>Vous pouvez accorder le bénéfice de Synergie duale à un allié situé dans les 9 m au lieu de vous-même, soit en permettant à cet allié de Se souvenir, soit pour accorder à cet allié des points de vie temporarires ou les deux, selon la tradition du sort.</p>
