--- a/data/feats/class-10-9VGmE7X4aK2W8YWj.htm
+++ b/data/feats/class-10-9VGmE7X4aK2W8YWj.htm
@@ -1,20 +1,18 @@
 Name: Dueling Dance (Swashbuckler)
 Nom: Danse en duel (Bretteur)
 PrereqEN: Dueling Parry
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Parade en duel
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Using your free hand as pivot and balance, you both attack and defend with your weapon.
-Avantage: En utilisant votre main libre comme pivot et équilibre, vous attaquez et défendez avec votre arme.
+Avantage: Vous bénéficiez constamment de Parade en duel.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding only a single one-handed melee <br />weapon and have your other hand or hands free.</p>
 <hr />
 <p>Using your free hand as pivot and balance, you both attack and defend with your weapon. While you are in this stance, you constantly have the benefits of Dueling Parry.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.WcY7H7mRiK2VDquV]{Parade en duel}</p>
-<p><strong>Conditions</strong> Vous maniez seulement une unique arme de corps à corps à une main et votre autre main ou vos autres mains sont libres.</p>
+<p><strong>Conditions</strong> Vous maniez une unique arme de corps à corps à une main et votre autre main ou vos autres mains sont libres.</p>
 <hr>
 <p>En utilisant votre main libre comme balancier pour vous équilibrer, vous parvenez à attaquer et à défendre avec votre arme. Tant que vous êtes dans cette posture, vous bénéficiez constamment de Parade en duel.</p>
