--- a/data/equipment/consumable-01-OIirLySQDLZgT15S.htm
+++ b/data/equipment/consumable-01-OIirLySQDLZgT15S.htm
@@ -1,7 +1,6 @@
 Name: Arsenic
 Nom: Arsenic
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p>This toxin is a compound of arsenic and other substances. You can't reduce your sickened condition while affected.</p>
