--- a/data/equipment/consumable-09-t4X6GDybqLmt7UkN.htm
+++ b/data/equipment/consumable-09-t4X6GDybqLmt7UkN.htm
@@ -1,13 +1,14 @@
 Name: Cheetah's Elixir (Greater)
 Nom: Elixir du guépard (supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>Enzymatic compounds in this elixir strengthen and excite the muscles in your legs. You gain a +10 foot status bonus to your Speed for 1 hour.</p>
 <p>@Compendium[pf2e.consumable-effects.PeuUz7JaabCgl6Yh]{Effect: Cheetah's Elixir (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
-Les composés enzymatiques de cet élixir renforcent et excitent les muscles de vos jambes. Vous gagnez un bonus de statut à la Vitesse pour la durée indiquée. Le bonus est de +3 mètres et la durée de 1 heure.
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+Les composés enzymatiques de cet élixir renforcent et excitent les muscles de vos jambes. 
+<p><strong>Avantage</strong>Vous gagnez un bonus de statut à la Vitesse de +4,5 mètres. </p>
+<p><strong>Durée</strong> 1 heures.</p>
 <p>@Compendium[pf2e.consumable-effects.PeuUz7JaabCgl6Yh]{Effect: Elixir du guépard (Supérieur)}</p>
