dons de classe 10

--- a/data/feats/class-10-BJKTUGplI9nwhJxg.htm
+++ b/data/feats/class-10-BJKTUGplI9nwhJxg.htm
@@ -2,12 +2,11 @@ Name: Agile Grace
 Nom: Agilité gracieuse
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your graceful moves with agile weapons are beyond compare.
-Avantage: Vos mouvements gracieux avec des armes agiles sont incomparables.
+Avantage: Le malus d'attaques multiples avec les armes et attaques à mains nues agiles diminuent.
 
 ------ Description (en) ------
 <p>Your graceful moves with agile weapons are beyond compare. Your multiple attack penalty with agile weapons and agile unarmed attacks becomes -3 for your second attack and -6 for subsequent attacks (rather than -4 and -8).</p>
