--- a/data/feats/class-10-cvo3DIL0BIRrDkQ6.htm
+++ b/data/feats/class-10-cvo3DIL0BIRrDkQ6.htm
@@ -2,14 +2,13 @@ Name: Ode To Ouroboros
 Nom: Ode à Ouroboros
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You learn the ode to ouroboros composition spell (page 228), which enables you to temporarily spare your allies from death.
-Avantage: Vous apprenez le sort de composition ode à ouroboros (page 228), qui vous permet d'épargner temporairement la mort à vos alliés.
+Avantage: Vous obtenez le sort de composition Ode à Ouroboros.
 
 ------ Description (en) ------
 <p>You learn the @Compendium[pf2e.spells-srd.DgCS456mXKw97vNy]{Ode to Ouroboros} composition spell, which enables you to temporarily spare your allies from death.</p>
 ------ Description (fr) ------
-<p>Vous apprenez le sort de composition <a class="entity-link" data-pack="pf2e.spells-srd" data-id="DgCS456mXKw97vNy" draggable="true"><i class="fas fa-suitcase"></i> Ode à Ouroboros</a>, qui vous permet d'éviter à vos alliés de manière temporaire de mourir.</p>
+<p>Vous apprenez le sort de composition @Compendium[pf2e.spells-srd.DgCS456mXKw97vNy]{Ode à Ouroboros}, qui vous permet d'éviter à vos alliés de manière temporaire de mourir.</p>
