--- a/data/feats/class-10-Asb0UsQqeATsxqFJ.htm
+++ b/data/feats/class-10-Asb0UsQqeATsxqFJ.htm
@@ -1,19 +1,16 @@
 Name: Courageous Assault
 Nom: Assaut vaillant
 PrereqEN: warrior muse
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Combattant (Muse de barde)
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: With a mighty shout, you can stir an ally to attack.
-Avantage: Avec un cri puissant, vous pouvez inciter un allié à attaquer.
+Avantage: Inspiration vaillante accorde à un llié une réaction pour Frapper au corps-à-corps.
 
 ------ Description (en) ------
 <p>With a mighty shout, you can stir an ally to attack.</p>
 <p>If your next action is to cast the @Compendium[pf2e.spells-srd.IAjvwqgiDr3qGYxY]{Inspire Courage} composition cantrip, one ally who gains a status bonus from the spell can immediately use a reaction to make a melee @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike}.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.classfeatures.N03BtRvjX9TeHRa4]{Combattante (Muse de barde)}</p>
-<hr>
 <p>Par un cri puissant, vous pouvez inciter un allié à attaquer.</p>
-<p>Si votre prochaine action consiste à lancer le tour de magie de composition @Compendium[pf2e.spells-srd.IAjvwqgiDr3qGYxY]{Inspiration vaillante}, un allié qui obtient le bonus de statut du sort peut immédiatement utiliser une réaction pour porter une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} de mêlée.</p>
+<p>Si votre prochaine action consiste à lancer le tour de magie de composition @Compendium[pf2e.spells-srd.IAjvwqgiDr3qGYxY]{Inspiration vaillante}, un allié qui obtient le bonus de statut du sort peut immédiatement utiliser une réaction pour porter une @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} au corps-à-corps.</p>
