--- a/data/feats/class-10-C0ozuEhrKh9A1wMO.htm
+++ b/data/feats/class-10-C0ozuEhrKh9A1wMO.htm
@@ -1,18 +1,15 @@
 Name: Overpowering Charge
 Nom: Charge surpuissante
 PrereqEN: Barreling Charge
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Charge irrépressible
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You trample your foes as you charge past them.
-Avantage: Vous piétinez vos ennemis en les dépassant.
+Avantage: Charge irrépressible vous permet d'infliger des fégâts contondants.
 
 ------ Description (en) ------
 <p>You trample your foes as you charge past them.</p>
 <p>When you use @Compendium[pf2e.feats-srd.to6s7QanfhHukW5r]{Barreling Charge} and successfully move through a creature's space, that creature takes bludgeoning damage equal to your Strength modifier. If you critically succeed, the creature takes twice this amount of damage and becomes @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} until the end of your next turn.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.to6s7QanfhHukW5r]{Charge irrépressible}</p>
-<hr>
-<p>Vous piétinez vos ennemis lorsque votre charge passe sur eux. Lorsque vous utilisez Charge Irrépressible et parvenez à réussir à traverser la case d'une créature, cette créature subit des dégâts contondants égaux à votre modificateur de Force. Si vous obtenez une réussite critique, la créature subit deux fois ce montant de dégâts et devient @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu} jusqu'à la fin de votre prochain tour.</p>
+<p>Vous piétinez vos ennemis lorsque votre charge passe sur eux. Lorsque vous utilisez @Compendium[pf2e.feats-srd.to6s7QanfhHukW5r]{Charge irrépressible} et parvenez à traverser la case d'une créature, celle-ci subit des dégâts contondants égaux à votre modificateur de Force. Si vous obtenez un succès critique, la créature subit deux fois ce montant de dégâts et devient @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prise au dépourvu} jusqu'à la fin de votre prochain tour.</p>
