--- a/data/feats/class-10-CAk1NNG4aO0VuHnZ.htm
+++ b/data/feats/class-10-CAk1NNG4aO0VuHnZ.htm
@@ -1,19 +1,16 @@
 Name: Ongoing Strategy
 Nom: Stratégie continue
 PrereqEN: strategic strike
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Frappe stratégique
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You're constantly studying small aspects of everyone's movements, even if you don't have a stratagem in place ahead of time.
-Avantage: Vous étudiez constamment de petits aspects des mouvements de tout le monde, même si vous n’avez pas de stratagème en place à l’avance.
+Avantage: Vous appliquez constamment les dégâts de Frappe stratégique à vos Frappes éligibles.
 
 ------ Description (en) ------
 <p>You're constantly studying small aspects of everyone's movements, even if you don't have a stratagem in place ahead of time.</p>
 <p>On any Strike for which you didn't @Compendium[pf2e.actionspf2e.m0f2B7G9eaaTmhFL]{Devise a Strategem}, you still deal precision damage equal to your number of strategic strike damage dice so long as the weapon or unarmed attack you used is one that would have let you use your Intelligence modifier had you Devised a Stratagem.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.classfeatures.2Fe4YZCvAr9Yf6w7]{Frappe stratégique}</p>
-<hr>
-<p>Vous étudiez constamment les aspects les plus faibles des mouvements de chacun, même si vous n'aviez pas encore déployé de stratagème .</p>
-<p>Sur n'importe quel @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} pour laquelle vous n'avez pas @Compendium[pf2e.actionspf2e.m0f2B7G9eaaTmhFL]{Conçu un Stratagème}, vous infligez toujours des dégâts de précision égaux à votre nombre de dés de dégâts de frappe stratégique tant que l'arme ou l'attaque à mains nues que vous utilisez est une de celle qui vous permet d'utiliser votre modificateur d'Intelligence pour Concevoir un Stratagème.</p>
+<p>Vous étudiez constamment les aspects les plus faibles des mouvements de chacun, même si vous n'avez pas encore mis en place un stratagème .</p>
+<p>Sur n'importe quelle @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappe} pour laquelle vous n'avez pas @Compendium[pf2e.actionspf2e.m0f2B7G9eaaTmhFL]{Conçu un Stratagème}, vous infligez toujours des dégâts de précision égaux à votre nombre de dés de dégâts de Frappe stratégique tant que l'arme ou l'attaque à mains nues que vous utilisez est une de celle qui vous permet d'utiliser votre modificateur d'Intelligence pour Concevoir un Stratagème.</p>
