--- a/data/feats/class-10-CkK7WwaWnrLXK9sW.htm
+++ b/data/feats/class-10-CkK7WwaWnrLXK9sW.htm
@@ -1,13 +1,12 @@
 Name: Methodical Debilitations
 Nom: Handicaps méthodiques
 PrereqEN: mastermind racket|Debilitating Strike
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Trafic de roublard : Cerveau|Frappes incapacitantes
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You strategically craft your debilitations to lessen or negate an enemy's tactical advantages.
-Avantage: Vous façonnez stratégiquement vos débilités pour réduire ou annuler les avantages tactiques de l’ennemi.
+Avantage: Les handicaps que vous infligez empêchent votre cible de prendre en tenaille ou de se protéger derrière un bouclier ou un abri.
 
 ------ Description (en) ------
 <p>You strategically craft your debilitations to lessen or negate an enemy's tactical advantages. Add the following debilitations to the list you can choose from when you use Debilitating Strike.</p>
@@ -16,10 +15,8 @@ Avantage: Vous façonnez stratégiquement vos débilités pour réduire ou annul
 <li><strong>Debilitation</strong> The target doesn't gain a circumstance bonus to AC from @Compendium[pf2e.actionspf2e.xjGwis0uaC2305pm]{Raising a Shield}, lesser cover, or standard cover; it gains only a +2 circumstance bonus to AC from greater cover or @Compendium[pf2e.actionspf2e.ust1jJSCZQUhBZIz]{Taking Cover}.</li>
 </ul>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.classfeatures.RyOkmu0W9svavuAB]{Trafic de roublard : Cerveau}, @Compendium[pf2e.classfeatures.9SruVg2lZpNaYLOB]{Frappes incapacitantes}</p>
-<hr>
 <p>Vous construisez stratégiquement les handicaps pour amoindrir ou annuler les avantages tactiques d'un adversaire. Ajoutez les handicaps suivants à la liste dans laquelle vous pouvez choisir lorsque vous utilisez @Compendium[pf2e.actionspf2e.bp0Up04x3dzGK5bB]{Frappe incapacitante}.</p>
 <ul>
 <li><strong>Handicap</strong> La cible ne peut prendre en tenaille d'autres créatures et elle ne peut fournir de tenaille à ses alliés.</li>
-<li><strong>Handicap</strong> La cible ne peut obtenir de bonus de circonstance à la CA lorsqu'elle @Compendium[pf2e.actionspf2e.xjGwis0uaC2305pm]{Lève un bouclier}, d'un abri partiel ou d'un abri normal ; elle n'obtient qu'un bonus de circonstances de +2 à la CA d'un abri supérieur ou en se @Compendium[pf2e.actionspf2e.ust1jJSCZQUhBZIz]{Mettant à l'abri}.</li>
+<li><strong>Handicap</strong> La cible ne peut obtenir de bonus de circonstances à la CA lorsqu'elle @Compendium[pf2e.actionspf2e.xjGwis0uaC2305pm]{Lève un bouclier}, d'un abri partiel ou d'un abri normal ; elle n'obtient qu'un bonus de circonstances de +2 à la CA d'un abri supérieur ou en se @Compendium[pf2e.actionspf2e.ust1jJSCZQUhBZIz]{Mettant à l'abri}.</li>
 </ul>
