--- a/data/feats/class-10-DLkMoVb8qb4qxnx3.htm
+++ b/data/feats/class-10-DLkMoVb8qb4qxnx3.htm
@@ -1,13 +1,12 @@
 Name: Targeting Finisher
-Nom: Botté ciblée
+Nom: Coup final ciblé
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your attack harms and hinders your foe.
-Avantage: Votre attaque blesse et entrave votre ennemi.
+Avantage: Votre attaque inflige les états Affaibli, Stupéfié ou réduit les vitesses de votre cible.
 
 ------ Description (en) ------
 <p>Your attack harms and hinders your foe. Choose a particular part of your foe from the list below and @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Strike}. If you hit and damage the target, apply the effect corresponding to the chosen part. This hindrance lasts until the end of your next turn. On a critical hit, you also apply a lesser effect lasting for 1 minute.</p>
@@ -17,9 +16,9 @@ Avantage: Votre attaque blesse et entrave votre ennemi.
 <li><strong>Legs</strong> The target takes a -10-foot status penalty to its Speeds. On a critical hit, it also takes a -5-foot status penalty to its Speeds for 1 minute.</li>
 </ul>
 ------ Description (fr) ------
-<p>Votre attaque blesse et gêne votre adversaire. Choisissez une partie particulière de votre adversaire dans la liste ci/dessous et @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappez}. Si vous touchez et blesseé la cible, appliquez l'effet correspondant à la partie choisie. La gêne dure jusqu'à la fin de votre prochain tour. Sur un coup critique, vous appliquez aussi un effet moindre qui dure pendant 1 minute.</p>
+<p>Votre attaque blesse et handicape votre adversaire. Choisissez une partie particulière de votre adversaire dans la liste ci-dessous et @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappez}. Si vous touchez et blessez la cible, appliquez l'effet correspondant à la partie choisie. Le handicap dure jusqu'à la fin de votre prochain tour. Sur un coup critique, vous appliquez aussi un effet moindre qui dure pendant 1 minute.</p>
 <ul>
 <li><strong>Bras (ou autre membre utilisé pour les attaques, tel qu'un tentacule)</strong> La cible est @Compendium[pf2e.conditionitems.MIRkyAjyBeXivMa7]{Affaiblie} 2. En cas de coup critique, elle est aussi Affaible 1 pendant 1 minute.</li>
-<li><strong>Tête</strong> La cible est @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfiée} 2. En cas de coup critique, elle est aussi stupéfaite 1 pendant 1 minute.</li>
-<li><strong>Jambes</strong> La cible subit une pénalité de –3 m à ses Vitesses. En cas de coup critique, elle subit une prénalité à ses Vitesse de - 1,5 m pendant 1 minute.</li>
+<li><strong>Tête</strong> La cible est @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfiée} 2. En cas de coup critique, elle est aussi stupéfiée 1 pendant 1 minute.</li>
+<li><strong>Jambes</strong> La cible subit une pénalité de –3 m à ses Vitesses. En cas de coup critique, elle subit une pénalité à ses Vitesses de - 1,5 m pendant 1 minute.</li>
 </ul>
