--- a/data/feats/class-10-aMef2VM4mSxl0pmy.htm
+++ b/data/feats/class-10-aMef2VM4mSxl0pmy.htm
@@ -1,17 +1,14 @@
 Name: Replenishment of War
 Nom: Récupération martiale
 PrereqEN: expert in your deity's favoured weapon
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: expert avec l’arme de prédilection de votre divinité
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Striking out against your enemies draws praise and protection from your deity.
-Avantage: Se battre contre ses ennemis attire les louanges et la protection de sa divinité.
+Avantage: Frapper avec l'arme de votre divinité vous accorde des points de vie temporaires.
 
 ------ Description (en) ------
 <p>Striking out against your enemies draws praise and protection from your deity. When you damage a creature with a Strike using your deity's favored weapon, you gain a number of temporary Hit Points equal to half your level, or equal to your level if the Strike was a critical hit. These temporary Hit Points last until the start of your next turn.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> expert avec l’arme de prédilection de votre divinité</p>
-<hr>
-<p>Frapper vos ennemis vous permet de bénéficier des louanges et de la protection de votre divinité. Quand vous infligez des dégâts à une créature en la Frappant avec l’arme de prédilection de votre divinité, vous gagnez un nombre de points de vie temporaires égal à la moitié de votre niveau, ou égal à votre niveau si la Frappe est un coup critique. Ces points de vie temporaires persistent jusqu’à la fin de votre prochain tour.</p>
+<p>Frapper vos ennemis vous permet de bénéficier des louanges et de la protection de votre divinité. Quand vous infligez des dégâts à une créature en la Frappant avec l’arme de prédilection de votre divinité, vous gagnez un nombre de points de vie temporaires égal à la moitié de votre niveau,ou égal à votre niveau si la Frappe est un coup critique. Ces points de vie temporaires persistent jusqu’à la fin de votre prochain tour.</p>
