--- a/data/feats/class-10-cznEQ1W61MSaXW0u.htm
+++ b/data/feats/class-10-cznEQ1W61MSaXW0u.htm
@@ -1,17 +1,14 @@
 Name: Great Cleave
 Nom: Grand coup tranchant
 PrereqEN: Cleave
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: Coup tranchant
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your fury carries your weapon through multiple foes.
-Avantage: Votre fureur porte votre arme à travers de multiples ennemis.
+Avantage: Coup tranchant peut achever plusieurs cibles
 
 ------ Description (en) ------
 <p>Your fury carries your weapon through multiple foes. When you Cleave, if your Strike also kills or knocks the target unconscious, you can continue to make melee Strikes until you make a Strike that doesn't kill or knock a creature unconscious, or until there are no creatures adjacent to the most recent creature you attacked while Cleaving, whichever comes first.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Coup tranchant</p>
-<hr>
-<p>Votre furie propulse votre arme à travers plusieurs adversaires. Quand vous portez un Coup tranchant, si votre Frappe tue ou fait perdre connaissance à votre cible, vous pouvez continuez de porter des Frappes au corps à corps jusqu’à ce que l’une d’elles ne tue pas ou ne fasse pas perdre connaissance à une créature, ou jusqu’à ce qu’il n’y ait plus de créature adjacente à la dernière créature que vous avez attaquée avec votre Coup tranchant.</p>
+<p>Votre furie propulse votre arme à travers plusieurs adversaires. Quand vous portez un Coup tranchant, si votre Frappe tue ou fait perdre connaissance à votre cible, vous pouvez continuez de porter des Frappes au corps-à-corps jusqu’à ce que l’une d’elles ne tue pas ou ne fasse pas perdre connaissance à une créature ou jusqu’à ce qu’il n’y ait plus de créature adjacente à la dernière créature que vous avez attaqué durant le Coup tranchant.</p>
