révision dons de classe 10

--- a/data/feats/class-10-GJIAecRq1bD2r8O0.htm
+++ b/data/feats/class-10-GJIAecRq1bD2r8O0.htm
@@ -2,12 +2,11 @@ Name: Twin Riposte
 Nom: Riposte jumelée
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: A clever parry with one weapon leaves your opponent open to an attack with the other weapon.
-Avantage: Une parade intelligente avec une arme laisse votre adversaire ouvert à une attaque avec l'autre arme.
+Avantage: Vous réagissez en Frappant ou en tentant de Désarmer l'adversaire qui obtient un échec critique à sa Frappe contre vous.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A creature within your reach critically fails a Strike against you</p>
