--- a/data/feats/class-10-DpRMdytpPiCypmkJ.htm
+++ b/data/feats/class-10-DpRMdytpPiCypmkJ.htm
@@ -1,17 +1,14 @@
 Name: Greater Bloodline
 Nom: Lignage supérieur
 PrereqEN: bloodline spell
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: sort de lignage
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Further communion with the legacy of your bloodline has uncovered greater secrets.
-Avantage: Une communion plus poussée avec l'héritage de votre lignée a permis de découvrir de plus grands secrets.
+Avantage: Vous obtenez le sort de lignage supérieur associé à votre lignage.
 
 ------ Description (en) ------
 <p>Further communion with the legacy of your bloodline has uncovered greater secrets. You gain the greater bloodline spell associated with your bloodline. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> sort de lignage</p>
-<hr>
 <p>Une communion plus poussée avec l’héritage de votre lignage vous a permis de percer des secrets plus importants. Vous gagnez le sort de lignage supérieur associé à votre lignage. Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
