--- a/data/feats/class-10-E1WXnYE2QwhHQxQb.htm
+++ b/data/feats/class-10-E1WXnYE2QwhHQxQb.htm
@@ -2,14 +2,12 @@ Name: Sleeper Hold
 Nom: Prise du sommeil
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You pinch crucial points of your target’s nervous system, impeding its ability to function.
-Avantage: Vous pincez des points cruciaux du système nerveux de votre cible, empêchant sa capacité à fonctionner.
------- Benefits and spoiler ----
-Avantage: Vous pincez des points cruciaux du système nerveux de votre cible, empêchant sa capacité à fonctionner.
+Avantage: Vous pouvez faire sombrer dans l'inconscience une créature que vous Empoignez ou Entravez.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You have a creature @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Grabbed} or @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Restrained}.</p>
 <hr />
@@ -18,8 +16,8 @@ Avantage: Vous pincez des points cruciaux du système nerveux de votre cible, em
 <p><strong>Critical Success:</strong> The target falls @Compendium[pf2e.conditionitems.fBnFDH2MTzgFijKf]{Unconscious} for 1 minute, though it remains standing and doesn't drop what it holds.</p>
 <p><strong>Success:</strong> The target is @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Clumsy 1} until the end of its next turn.</p>
 ------ Description (fr) ------
-<p><strong>Conditions</strong> Vous empoignez ou entravez une créature.</p>
+<p><strong>Conditions</strong> Vous @Compendium[pf2e.conditionitems.kWc1fhmv9LBiTuei]{Empoignez} ou @Compendium[pf2e.conditionitems.VcDeM8A5oI6VqhbM]{Entravez} une créature.</p>
 <hr>
-<p>Vous pincez les points cruciaux du système nerveux de votre cible pour bloquer ses capacités fonctionnelles. Faites un test d’Athlétisme pour Saisir la créature, avec les effets de succès et de succès critique suivants au lieu des effets habituels.</p>
+<p>Vous pincez les points cruciaux du système nerveux de votre cible pour bloquer ses capacités fonctionnelles. Faites un test d’Athlétisme pour @Compendium[pf2e.actionspf2e.PMbdMWc2QroouFGD]{Saisir} la créature, avec les effets de succès et de succès critique suivants au lieu des effets habituels.</p>
 <p><strong>Succès critique</strong> La cible tombe inconsciente pendant une minute, mais elle reste debout et ne lâche pas ce qu’elle tient en mains.</p>
-<p><strong>Succès</strong>La cible est @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{maladroite} 1 jusqu’à la fin de son prochain tour</p>
+<p><strong>Succès</strong>La cible est @Compendium[pf2e.conditionitems.i3OJZU2nk64Df3xm]{Maladroite} 1 jusqu’à la fin de son prochain tour</p>
