--- a/data/feats/class-10-F0MYBfiyOD8YHq5t.htm
+++ b/data/feats/class-10-F0MYBfiyOD8YHq5t.htm
@@ -1,9 +1,8 @@
 Name: Elemental Shape
 Nom: Morphologie élémentaire
 PrereqEN: Wild Shape
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: Morphologie sauvage
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You understand the fundamental elements of nature such that you can imbue them into your body.
@@ -14,6 +13,5 @@ Avantage: Vous comprenez les éléments fondamentaux de la nature de telle sorte
 <p>Add the forms in @Compendium[pf2e.spells-srd.1K6AYGisvo9gqdhs]{Elemental Form} to your <em>wild shape</em> list.</p>
 <p>Whenever you're polymorphed into another form using <em>wild shape</em>, you gain resistance 5 to fire.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> Morphologie sauvage</p>
-<hr>
-<p>Vous comprenez les éléments fondamentaux de la nature au point que vous pouvez en imprégner votre corps afin de devenir une incarnation vivante de ces éléments. Ajoutez les formes du sort forme élémentaire à celles de votre morphologie sauvage. Chaque fois que vous adoptez une forme en utilisant morphologie sauvage, vous bénéficiez d’une résistance 5 au feu</p>
+<p>Vous comprenez les éléments fondamentaux de la nature au point que vous pouvez en imprégner votre corps afin de devenir une incarnation vivante de ces éléments. Ajoutez les formes du sort @Compendium[pf2e.spells-srd.1K6AYGisvo9gqdhs]{Forme élémentaire} à la liste de celles de votre morphologie sauvage.</p>
+<p>Chaque fois que vous adoptez une forme en utilisant morphologie sauvage, vous bénéficiez d’une résistance 5 au feu</p>
