--- a/data/feats/class-10-FIsMdgvGji5Nci8l.htm
+++ b/data/feats/class-10-FIsMdgvGji5Nci8l.htm
@@ -1,17 +1,14 @@
 Name: Devoted Focus
 Nom: Focalisation dévouée
 PrereqEN: devotion spells
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: sorts de dévotion
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: Your devotion is strong enough to increase your focus to incredible heights.
-Avantage: Votre dévotion est suffisamment forte pour que votre concentration atteigne des sommets incroyables.
+Avantage: Refocaliser vous permet de récupérer 2 points de focalisation.
 
 ------ Description (en) ------
 <p>Your devotion is strong enough to increase your focus to incredible heights. If you have spent at least 2 Focus Points since the last time you Refocused, you recover 2 Focus Points when you Refocus instead of 1.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> sorts de dévotion</p>
-<hr>
 <p>Votre dévotion est si intense que votre focalisation connaît un accroissement époustouflant. Si vous avez dépensé au moins 2 points de focalisation depuis votre dernière Refocalisation, vous récupérez 2 points de focalisation au lieu de 1 lorsque vous vous Refocalisez.</p>
