--- a/data/feats/class-10-FLQWJ2CIv9mCfSAx.htm
+++ b/data/feats/class-10-FLQWJ2CIv9mCfSAx.htm
@@ -2,14 +2,13 @@ Name: Elastic Mutagen
 Nom: Mutagène élastique
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can cause your body to twist and flow like the quicksilver within your mutagens.
-Avantage: Vous pouvez faire en sorte que votre corps se torde et coule comme le vif-argent de vos mutagènes.
+Avantage: Vous pouvez Faire un pas de 3 m et êtes considéré comme d'une taille inférieure.
 
 ------ Description (en) ------
 <p>You can cause your body to twist and flow like the quicksilver within your mutagens. Whenever you are under the effects of a quicksilver mutagen, you can stretch your legs and Step up to 10 feet, and you can squish and compress your body, allowing you to make it through tight spaces as if you were one size smaller, in addition to any effect from Squeezing.</p>
 ------ Description (fr) ------
-<p>Vous pouvez donner à votre corps la consistance du vif-argent que vous voyez se tordre et s’enrouler dans vos mutagènes. À chaque fois que vous vous trouvez sous l’effet d’un mutagène de vif-argent, vous pouvez étirer vos jambes et Faire un pas d’un maximum de 3 m. Vous pouvez aussi vous faire petit et compresser votre corps afin de pouvoir traverser des espaces étroits comme si vous faisiez une catégorie de taille de moins, en plus des autres effets de l’action Se faufiler.</p>
+<p>Vous pouvez donner à votre corps la consistance du vif-argent que vous voyez se tordre et s’enrouler dans vos mutagènes. À chaque fois que vous vous trouvez sous l’effet d’un Mutagène de vif-argent, vous pouvez étirer vos jambes et Faire un pas d’un maximum de 3 m. Vous pouvez aussi vous faire petit et compresser votre corps afin de pouvoir traverser des espaces étroits comme si vous faisiez une catégorie de taille de moins, en plus de tout autre effets de l’action Se faufiler.</p>
