--- a/data/feats/class-10-FWIQ3m5KZDWzDg47.htm
+++ b/data/feats/class-10-FWIQ3m5KZDWzDg47.htm
@@ -1,18 +1,14 @@
 Name: Wind Jump
 Nom: Saut du vent
 PrereqEN: |ki spells
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: sorts ki
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You gather the wind beneath you, allowing you to soar as you jump.
-Avantage: Tu rassembles le vent sous toi, ce qui te permet de t'élever en sautant.
------- Benefits and spoiler ----
-Avantage: Tu rassembles le vent sous toi, ce qui te permet de t'élever en sautant.
+Avantage: Vous obtenez le sort ki Saut du vent
+
 ------ Description (en) ------
 <p>You gather the wind beneath you, allowing you to soar as you jump. You gain the @Compendium[pf2e.spells-srd.kRxlkPPe6Gr7Du59]{Wind Jump} ki spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> sorts ki</p>
-<hr>
-<p>Vous invoquez le vent pour qu’il vous soulève et que vous puissiez prendre votre envol en sautant. Vous obtenez le sort ki saut du vent (page 397). Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
+<p>Vous invoquez le vent pour qu’il vous soulève et que vous puissiez prendre votre envol en sautant. Vous obtenez le sort ki @Compendium[pf2e.spells-srd.kRxlkPPe6Gr7Du59]{Saut du vent}. Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
