--- a/data/feats/class-10-GLbl3qoWCvvjJr4S.htm
+++ b/data/feats/class-10-GLbl3qoWCvvjJr4S.htm
@@ -2,12 +2,11 @@ Name: Tangle Of Battle
 Nom: Enchevêtrement de la bataille
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your incredibly vicious Strike pulls you right in close, giving you the opportunity to grab your foe.
-Avantage: Votre frappe incroyablement vicieuse vous rapproche, vous donnant l'opportunité de saisir votre ennemi.
+Avantage: Un coup critique vous permet de Saisir votre adversaire adjacent.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You critically hit an adjacent enemy.</p>
