--- a/data/feats/class-10-Gcliatty0MGYbTVV.htm
+++ b/data/feats/class-10-Gcliatty0MGYbTVV.htm
@@ -2,12 +2,11 @@ Name: Oracular Warning
 Nom: Avertissement oraculaire
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You have a flash of insight about impending danger related to one ally, and you can shout or gesture to warn that ally of the threat a moment before it materializes.
-Avantage: Vous avez un éclair de perspicacité concernant un danger imminent lié à un allié, et vous pouvez crier ou faire un geste pour avertir cet allié de la menace un moment avant qu'elle ne se matérialise.
+Avantage: Votre allié peut faire deux tests d'initiative pour garder le meilleur et vous en faites deux pour garder le pire.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You are about to roll initiative.</p>
@@ -16,6 +15,6 @@ Avantage: Vous avez un éclair de perspicacité concernant un danger imminent li
 <p>You are momentarily thrown off by the divine insight, however, and you must roll twice for your initiative roll and use the worse result. This is a misfortune effect. The two effects are tied together; if you would avoid the misfortune effect for any reason, or if any of your allies would negate their fortune effect, your Oracular Warning does nothing. Depending on whether you use gestures or call out, this action gains either the visual or auditory trait, respectively.</p>
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous allez tirer l'initiative.</p>
-<hr>
-<p>Vous recevez un flash d'intuition à propos du danger en lien avec un allié et vous pouvez crier ou faire un geste d'avertissement à cet allié sur la menace un moment avant qu'elle ne se matérialise. Un allié de votre choix peut lancer deux fois l'initiative et utiliser le meilleur résultat ; c'est un effet de chance. Si vous êtes légendaire en Religion, vous recevez deux visions et pouvez avertir deux alliés, leur accordant à tous les deux cet avantage.</p>
+<hr />
+<p>Vous recevez un flash d'intuition à propos du danger qui menace un allié et vous pouvez crier ou faire un geste d'avertissement à cet allié sur la menace un moment avant qu'elle ne se matérialise. Un allié de votre choix peut lancer deux fois l'initiative et utiliser le meilleur résultat ; c'est un effet de chance. Si vous êtes légendaire en Religion, vous recevez deux visions et pouvez avertir deux alliés, leur accordant à tous les deux cet avantage.</p>
 <p>Vous êtes momentanément coupé de l'intuition divine, quoi qu'il en soit et vous devez lancer deux fois l'initiative et utiliser le pire résultat. C'est un effet de malchance. Les deux effets sont liés ensemble ; si vous pouvez éviter l'effet de malchance quel qu'en soit la raison ou si n'importe lequel de vos allié peut annuler son effet de fortune, votre Avertissement oraculaire ne fait rien. En fonction de l'utilisation de geste ou d'appel, cette action obtient respectivement les traits visuel ou audible.</p>
