--- a/data/feats/class-10-dutiFC41YFllm8fM.htm
+++ b/data/feats/class-10-dutiFC41YFllm8fM.htm
@@ -2,14 +2,13 @@ Name: House of Imaginary Walls
 Nom: Demeure aux murs imaginaires
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You erect an imaginary barrier others believe to be real.
-Avantage: Vous érigez une barrière imaginaire que d'autres croient réelle.
+Avantage: Vous obtenez le tour de magie de composition Demeure aux murs imaginaires.
 
 ------ Description (en) ------
 <p>You erect an imaginary barrier others believe to be real. You learn the @Compendium[pf2e.spells-srd.PEfSofHm73IT3Khc]{House of Imaginary Walls} composition cantrip.</p>
 ------ Description (fr) ------
-<p>Vous dressez une barrière imaginaire que les autres croient réelle. Vous apprenez le tour de magie de composition demeure aux murs imaginaires (page 386).</p>
+<p>Vous dressez une barrière imaginaire que les autres croient réelle. Vous apprenez le tour de magie de composition Demeure aux murs imaginaires.</p>
