révision dons de classe 10

--- a/data/feats/class-10-HjinlKihkadhkQ4Z.htm
+++ b/data/feats/class-10-HjinlKihkadhkQ4Z.htm
@@ -1,17 +1,14 @@
 Name: Terrifying Howl
 Nom: Hurlement terrifiant
 PrereqEN: Intimidating Glare
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: Regard intimidant
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You unleash a terrifying howl.
-Avantage: Tu déchaînes un hurlement terrifiant.
+Avantage: Vous Intimidez toutes les créatures dans un rayon 9 m.
 
 ------ Description (en) ------
 <p>You unleash a terrifying howl. Attempt Intimidate checks to Demoralize each enemy within 30 feet. Regardless of the results of your checks, each enemy is then temporarily immune to Terrifying Howl for 1 minute.</p>
 ------ Description (fr) ------
-<p><strong> Prérequis</strong> Regard intimidant</p>
-<hr>
 <p> Vous poussez un hurlement terrifiant. Faites des tests d’Intimidation pour Démoraliser tous chaque ennemi qui se trouve dans un rayon de 9 m. Quel que soit le résultat de vos tests, chacune de ces créatures est alors temporairement immunisée au Hurlement terrifiant pendant 1 minute.</p>
