--- a/data/feats/class-10-KR78kinMmAZQHeoa.htm
+++ b/data/feats/class-10-KR78kinMmAZQHeoa.htm
@@ -6,7 +6,7 @@ PrereqFR: ource de guérison|alignement bon
 
 ------ Benefits and spoiler ----
 Benefits: The restorative power of your healing invigorates the recipient.
-Avantage: Le pouvoir réparateur de votre guérison revigore le destinataire.
+Avantage: Votre guérison donne au bénéficiaire un bonus de statut de +1,50 m à sa Vitesse, un bonus de statut de +1 aux jets d’attaque et un bonus de statut de +1 aux jets de dégâts.
 
 ------ Description (en) ------
 <p>The restorative power of your healing invigorates the recipient.</p>
