--- a/data/feats/class-10-kQEIPYoKTt69yXxV.htm
+++ b/data/feats/class-10-kQEIPYoKTt69yXxV.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: You reflect the spell back against the triggering opponent.
-Avantage: Votre bouclier renvoie le sort à l'adversaire qui vous a pris pour cible.
+Avantage: Votre bouclier levé renvoie le sort à celui qui vous a pris pour cible avec un sort et obtenu un échec critique sur son jet d'attaque.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> An opponent casting a spell that targets you critically fails a spell attack roll against your AC.</p>
