--- a/data/feats/class-10-H0tffYs7ODMQ3JJj.htm
+++ b/data/feats/class-10-H0tffYs7ODMQ3JJj.htm
@@ -1,15 +1,14 @@
 Name: Terrain Transposition
 Nom: Transposition de terrain
 PrereqEN: warden spells
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: sorts de gardien
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You are so connected to the wilderness that you can magically jump from place to place within it.
-Avantage: Vous êtes tellement connecté à la nature sauvage que vous pouvez magiquement sauter d'un endroit à l'autre.
+Avantage: Vous obtenez le sort de gardien Transposition de terrain.
 
 ------ Description (en) ------
 <p>You are so connected to the wilderness that you can magically jump from place to place within it. You gain the @Compendium[pf2e.spells-srd.rtA3HRGoy7PQTOhq]{Terrain Transposition} warden spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p>Vous êtes tellement lié au monde naturel que vous pouvez magiquement sauter de lieu en lieu pour vous placer dedans. Vous obtenez le sort de gardien <a class="entity-link" data-pack="pf2e.spells-srd" data-id="rtA3HRGoy7PQTOhq" draggable="true"><i class="fas fa-suitcase"></i>Transposition de terrain</a>. Augmentez le nombre de Points de focalisation dans votre réserve de focalisation de 1.</p>
+<p>Vous êtes tellement lié au monde naturel que vous pouvez magiquement sauter de lieu en lieu pour vous placer dedans. Vous obtenez le sort de gardien @Compendium[pf2e.spells-srd.rtA3HRGoy7PQTOhq]{Transposition de terrain}. Augmentez le nombre de Points de focalisation dans votre réserve de focalisation de 1.</p>
