--- a/data/feats/class-10-I9rSWQyueWHQyNxe.htm
+++ b/data/feats/class-10-I9rSWQyueWHQyNxe.htm
@@ -1,20 +1,17 @@
 Name: Plant Shape
 Nom: Morphologie végétales
 PrereqEN: |leaf order or Wild Shape
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: ordre de la feuille ou Morphologie sauvage
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You can take the form of a plant creature.
-Avantage: Vous pouvez prendre la forme d'une créature végétale.
------- Benefits and spoiler ----
-Avantage: Vous pouvez prendre la forme d'une créature végétale.
+Avantage: Vous pouvez utiliser Forme de plante.
+
 ------ Description (en) ------
 <p>You can take the form of a plant creature.</p>
 <p>Add the forms listed in @Compendium[pf2e.spells-srd.zCcfPS4y5SrZzU2x]{Plant Form} to your wild shape list; if you don't have <em>wild shape</em>, you can instead cast <em>plant form</em> once per day, heightened to the same level as your highest-level druid spell slot.</p>
 <p>Whenever you're polymorphed into another form using <em>wild shape</em>, you gain resistance 5 to poison.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> ordre de la feuille ou Morphologie sauvage</p>
-<hr>
-<p>Vous pouvez adopter la forme d’une créature végétale. Ajoutez les formes du sort forme de plante à celles de votre morphologie sauvage; si vous n’avez pas morphologie sauvage, vous pouvez à la place lancer forme de plante une fois par jour, intensifié jusqu’au plus haut niveau de sort que vous pouvez lancer. Chaque fois que vous adoptez une forme en utilisant morphologie sauvage, vous bénéficiez d’une résistance 5 au poison..</p>
+<p>Vous pouvez adopter la forme d’une créature végétale. Ajoutez les formes du sort Forme de plante à la liste de celles de votre morphologie sauvage ; si vous n’avez pas morphologie sauvage, vous pouvez à la place lancer Forme de plante une fois par jour, intensifié jusqu’au plus haut niveau de sort que vous pouvez lancer.</p>
+<p>Chaque fois que vous adoptez une forme en utilisant morphologie sauvage, vous bénéficiez d’une résistance 5 au poison.</p>
