--- a/data/feats/class-10-h5DzKmKDADGhvmF9.htm
+++ b/data/feats/class-10-h5DzKmKDADGhvmF9.htm
@@ -6,7 +6,7 @@ PrereqFR:
 
 ------ Benefits and spoiler ----
 Benefits: Even when you don’t hit squarely, you can still score a glancing blow.
-Avantage: Même si vous ne frappez pas directement, vous pouvez toujours porter un coup indirect.
+Avantage: Même si votre Frappe au corps-à-corps est un échec, vous infligez des dégâts minimaux.
 
 ------ Description (en) ------
 <p>Even when you don't hit squarely, you can still score a glancing blow. Make a melee Strike. It gains the following failure effect.</p>
@@ -14,4 +14,5 @@ Avantage: Même si vous ne frappez pas directement, vous pouvez toujours porter 
 <p><strong>Failure</strong> Your attack deals any damage it would have dealt on a hit, excluding all damage dice. (This removes damage dice from weapon runes, spells, and special abilities, in addition to weapon damage dice.)</p>
 ------ Description (fr) ------
 <p>Lorsque vous ne touchez pas franchement votre cible, vous parvenez quand même à infliger des dégâts superficiels. Effectuez une Frappe au corps à corps. Elle obtient l’effet d’échec suivant.</p>
-<p><stong>Échec</stong> Votre attaque inflige les dégâts qu’elle devrait normalement infliger en cas de succès, en enlevant tous les dés de dégâts (vous retirez ainsi les dés de dégâts conférés par les runes d’arme, les sorts, les pouvoirs spéciaux, en plus des dés de dégâts d’arme).</p>
+<hr />
+<p><strong>Échec</strong> Votre attaque inflige les dégâts qu’elle devrait normalement infliger en cas de succès, en enlevant tous les dés de dégâts (vous retirez ainsi les dés de dégâts conférés par les runes d’arme, les sorts, les pouvoirs spéciaux en plus des dés de dégâts d’arme).</p>
