--- a/data/feats/class-10-kUv9eiP8Zhck70WZ.htm
+++ b/data/feats/class-10-kUv9eiP8Zhck70WZ.htm
@@ -1,15 +1,13 @@
 Name: Eldritch Debilitations
 Nom: Handicaps mystiques
 PrereqEN: |eldritch trickster racket|Debilitating Strike
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Trafic de roublard : Mystificateur|Frappes incapacitantes
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You know how to apply debilitations that are particularly troublesome for spellcasters.
-Avantage: Vous savez comment appliquer des débilitations particulièrement gênantes pour les lanceurs de sorts.
------- Benefits and spoiler ----
-Avantage: Vous savez comment appliquer des débilitations particulièrement gênantes pour les lanceurs de sorts.
+Avantage: Frappe incapacitante inflige l'effet Stupéfié ou empêche de Faire un pas.
+
 ------ Description (en) ------
 <p>You know how to apply debilitations that are particularly troublesome for spellcasters. Add the following debilitations to the list you can choose from when you use @Compendium[pf2e.actionspf2e.bp0Up04x3dzGK5bB]{Debilitating Strike}.</p>
 <ul>
@@ -17,8 +15,6 @@ Avantage: Vous savez comment appliquer des débilitations particulièrement gên
 <li><strong>Debilitation</strong> The target can't @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Step}.</li>
 </ul>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.classfeatures.D8qtAo2w4jsqjBrM]{Trafic de roublard : Mystificateur}, @Compendium[pf2e.classfeatures.9SruVg2lZpNaYLOB]{Frappes incapacitantes}</p>
-<hr />
 <p>Vous savez comment infliger des handicaps particulièrement difficiles à surmonter pour les lanceurs de sorts. Ajoutez les handicaps suivants à la liste de ceux que vous pouvez choisir lorsque vous utilisez @Compendium[pf2e.actionspf2e.bp0Up04x3dzGK5bB]{Frappe incapacitante}.</p>
 <ul>
 <li><strong>Handicap</strong> La cible est @Compendium[pf2e.conditionitems.e1XGnhKNSQIm5IXg]{Stupéfiée} 1.</li>
