révision dons de classe 10

--- a/data/feats/class-10-MgqRwyL8PWyYvoZs.htm
+++ b/data/feats/class-10-MgqRwyL8PWyYvoZs.htm
@@ -2,12 +2,11 @@ Name: Energy Fusion
 Nom: Fusion d'énergies
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You fuse two spells together, combining their energy types.
-Avantage: Vous fusionnez deux sorts en combinant leurs types d'énergie.
+Avantage: Vous infligez des dégâts de deux types d'énergie en dépensant deux emplacements en même temps.
 
 ------ Description (en) ------
 <p>You fuse two spells together, combining their energy types.</p>
@@ -15,5 +14,5 @@ Avantage: Vous fusionnez deux sorts en combinant leurs types d'énergie.
 <p>The spell's total damage is divided evenly between the energy type of the spell you cast and the energy type of the secondary spell.</p>
 ------ Description (fr) ------
 <p>Vous fusionnez deux sorts ensemble, en combinant leurs types d'énergie.</p>
-<p>Si la prochaine action que vous utilisez consiste à Lancer un sort qui inflige des dégâts d'acide, de froid, d'électricité, de feu ou de son, sélectionnez dans votre répertoire de sorts un sort qui n'est pas un tour de magie et qui inflige un type de dégâts d'énergie différent de celui de cette liste et dépensez un emplacement supplémentaire du même niveau que ce second sort.</p>
+<p>Si la prochaine action que vous utilisez consiste à @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancer} un sort qui inflige des dégâts d'acide, de froid, d'électricité, de feu ou de son, sélectionnez dans votre répertoire de sorts un sort qui n'est pas un tour de magie et qui inflige un type de dégâts d'énergie différent de celui de cette liste et dépensez un emplacement supplémentaire du même niveau que ce second sort.</p>
 <p>Le sort que vous lancez inflige des dégâts supplémentaires égaux au niveau de l'emplacement du second sort utilisé. Le total des dégâts du sort est divisé de manière égale entre le type d'énergie du sort que vous lancez et le type d'énergie du deuxième sort.</p>
