--- a/data/feats/class-10-Mvw3ZFrdwMHedAxY.htm
+++ b/data/feats/class-10-Mvw3ZFrdwMHedAxY.htm
@@ -2,12 +2,11 @@ Name: Merciful Elixir
 Nom: Élixir miséricordieux
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You mix a special additive into your elixir that calms the drinker’s body and mind.
-Avantage: Vous mélangez un additif spécial dans votre élixir qui calme le corps et l'esprit du buveur.
+Avantage: Alchimie rapide vous permet de Fabriquer un élixir de vie qui contre les effets de terreur et l'état Paralysé.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per round</p>
@@ -18,4 +17,4 @@ Avantage: Vous mélangez un additif spécial dans votre élixir qui calme le cor
 <p><strong>Fréquence</strong> une fois par round</p>
 <p><strong>Déclencheur</strong> Vous fabriquez un élixir de vie à l’aide d’Alchimie rapide, qui est inférieur d’au moins 2 niveaux à votre niveau d’alchimie avancée</p>
 <hr>
-<p>Vous ajoutez une substance spéciale dans votre élixir qui calme le corps et l’esprit de celui qui le consomme. L’élixir de vie tente de contrer un effet de @Compendium[pf2e.spells-srd.4koZzrnMXhhosn0D]{terreur} ou un effet causant l’état @Compendium[pf2e.spells-srd.DCQHaLrYXMI37dvW]{paralysé}.</p>
+<p>Vous ajoutez une substance spéciale dans votre élixir qui calme le corps et l’esprit de celui qui le consomme. L’élixir de vie tente de contrer un effet de @Compendium[pf2e.spells-srd.4koZzrnMXhhosn0D]{terreur} ou un effet causant l’état @Compendium[pf2e.spells-srd.DCQHaLrYXMI37dvW]{Paralysé}.</p>
