--- a/data/feats/class-10-OEGhbRgW6wRbccns.htm
+++ b/data/feats/class-10-OEGhbRgW6wRbccns.htm
@@ -2,12 +2,11 @@ Name: Disruptive Stance
 Nom: Posture perturbatrice
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: The slightest distraction can provoke your wrath, and you’re prepared to foil enemies’ actions.
-Avantage: Vous bénéficiez d'une attaque d'opportunité contre les créatures qui se concentrent, qui manipulent ou se déplacent et pouvez facilement les interrompre.
+Avantage: Vous bénéficiez d'une attaque d'opportunité contre les créatures qui se concentrent, qui manipulent ou se déplacent et pouvez les interrompre.
 
 ------ Description (en) ------
 <p>The slightest distraction can provoke your wrath, and you're prepared to foil enemies' actions.</p>
