--- a/data/feats/class-10-lG4dYrnkE42IgnGG.htm
+++ b/data/feats/class-10-lG4dYrnkE42IgnGG.htm
@@ -2,12 +2,11 @@ Name: Energy Ward
 Nom: Protection énergétique
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You trap energy from the last spell you cast within your body, coating your flesh in a protective ward.
-Avantage: Vous emprisonnez l'énergie du dernier sort que vous avez lancé dans votre corps, recouvrant votre chair d'une enveloppe protectrice.
+Avantage: Vous obtenez une résistance 5 contre le type d'énergie infligé par le sort que vous venez de lancer.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per turn</p>
