--- a/data/feats/class-10-p2I4o9Cc6UrXvjhO.htm
+++ b/data/feats/class-10-p2I4o9Cc6UrXvjhO.htm
@@ -2,12 +2,11 @@ Name: Furious Sprint
 Nom: Course furieuse
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You rush forward.
-Avantage: Vous vous précipitez en avant.
+Avantage: Vous Marchez rapidement jusqu'à 8 fois.
 
 ------ Description (en) ------
 <p>You rush forward. Stride up to five times your Speed in a straight line. You can increase the number of actions this activity takes to 3 to Stride up to eight times your Speed in a straight line instead.</p>
