--- a/data/feats/class-10-nWxNV9pFeBHV671W.htm
+++ b/data/feats/class-10-nWxNV9pFeBHV671W.htm
@@ -1,17 +1,14 @@
 Name: Pristine Weapon
 Nom: Arme immaculée
 PrereqEN: Verdant Weapon
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Arme verdoyante
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your verdant weapon can cut through the resistances of magical creatures.
-Avantage: Votre arme verdoyante peut couper les résistances des créatures magiques.
+Avantage: Votre arme verdoyante est considérée comme en fer froid et en argent et peut infliger des dégâts de saignement persistants.
 
 ------ Description (en) ------
 <p>Your verdant weapon can cut through the resistances of magical creatures. The weapon is treated as cold iron and silver. If you critically hit a creature that has a weakness to cold iron or silver, the target takes [[/r 1d6 #persistent bleed]] persistent bleed damage as the primal energies within your weapon slow its natural healing.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.qPFWEyihvbWsCcUv]{Arme verdoyante}</p>
-<hr>
-<p>Votre arme verdoyante peut passer les résistances des créatures magiques. L'arme est considérée comme en fer froid et en argent. Si voous obtenez un succès critique pour toucher une créature qui a une faiblesse au fer froid ou à l'argent, la cible subit [[/r 1d6 #saignement persistant]] dégâts de saignement persistants lorsque les énergies primordiales contenues dans votre arme ralentissent sa guérison naturelle.</p>
+<p>Votre arme verdoyante peut passer les résistances des créatures magiques. L'arme est considérée comme en fer froid et en argent. Si vous obtenez un succès critique pour toucher une créature qui a une faiblesse au fer froid ou à l'argent, la cible subit [[/r 1d6 #saignement persistant]] dégâts de saignement persistants lorsque les énergies primordiales contenues dans votre arme ralentissent sa guérison naturelle.</p>
