--- a/data/feats/class-10-otBBb0ndASgPdAXW.htm
+++ b/data/feats/class-10-otBBb0ndASgPdAXW.htm
@@ -2,12 +2,11 @@ Name: Penetrating Shot
 Nom: Tir pénétrant
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You shoot clear through an intervening creature to hit your prey.
-Avantage: Vous tirez à travers une créature intermédiaire pour atteindre votre proie.
+Avantage: Votre tir passe blesse une première créature avant d'atteindre votre proie.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are wielding a ranged weapon</p>
@@ -15,5 +14,5 @@ Avantage: Vous tirez à travers une créature intermédiaire pour atteindre votr
 <p>You shoot clear through an intervening creature to hit your prey. Choose a target that is giving lesser cover to your hunted prey. Make a single ranged Strike with the required weapon against the chosen target and your hunted prey. This attack ignores any lesser cover the chosen target provides your hunted prey. Roll damage only once, and apply it to each creature you hit. A Penetrating Shot counts as two attacks for your multiple attack penalty.</p>
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Vous maniez une arme à distance</p>
-<hr>
+<hr />
 <p>Votre projectile atteint votre proie même si une créature s’interpose entre vous et elle. Désignez une cible qui offre un abri partiel à votre proie. Faites une unique Frappe à distance avec l’arme requise contre la cible désignée et votre proie. Cette attaque ignore l’abri partiel que la cible désignée offre à votre proie. Vous faites un seul jet de dégâts que vous appliquez à chaque créature touchée. Une Frappe pénétrante compte comme deux attaques pour le calcul de votre malus d’attaques multiples.</p>
