révision dons de classe 10

--- a/data/feats/class-10-Sc9clbAXe97vlzxM.htm
+++ b/data/feats/class-10-Sc9clbAXe97vlzxM.htm
@@ -2,12 +2,11 @@ Name: Suspect of Opportunity
 Nom: Suspect opportun
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Sometimes something intrudes upon your case unexpectedly, such as an ambush sent to bring your investigation to a close.
-Avantage: Parfois, quelque chose s'immisce dans votre affaire de manière inattendue, comme une embuscade envoyée pour mettre un terme à votre enquête.
+Avantage: Vous faites d'un ennemi qui vous attaque une piste temporaire.
 
 ------ Description (en) ------
 <p><strong>Frequency</strong> once per hour</p>
@@ -17,7 +16,7 @@ Avantage: Parfois, quelque chose s'immisce dans votre affaire de manière inatte
 <p>You @Compendium[pf2e.actionspf2e.xTK2zsWFyxSJvYbX]{Pursue a Lead} against the triggering foe, setting aside but not ending one of your currently active leads, if you have two leads. At the end of the combat encounter, you stop Pursuing the Lead against the triggering foe and return to the original lead, if you have one.</p>
 ------ Description (fr) ------
 <p><strong>Fréquence</strong> une fois par heure</p>
-<p><strong>Déclencheur</strong> Un adversaire entreprend contre vous une action hostile au cour d'un combat.</p>
-<hr>
+<p><strong>Déclencheur</strong> Un adversaire entreprend contre vous une action hostile au cours d'un combat.</p>
+<hr />
 <p>Quelques fois quelqu'un s'introduit dans votre affaire de manière inattendue, comme une embuscade envoyée pour pouvoir mettre un terme à votre enquête. Vous avez appris à compartimenter votre piste principale et à en suivre une nouvelle pendant la situation délicate actuelle.</p>
-<p>Vous <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="xTK2zsWFyxSJvYbX" draggable="true"><i class="fas fa-suitcase"></i> Suivez une piste</a> contre l'ennemi déclencheur, mettant de côté sans la terminer une de vos pistes alors actives, si vous avez deux pistes. À la fin de ce combat, vous arrêtez de Suivre la piste contre l'ennemi déclencheur pour reprendre la piste originelle, si vous en aviez une.</p>
+<p>Vous @Compendium[pf2e.actionspf2e.xTK2zsWFyxSJvYbX]{Suivez une piste} contre l'ennemi déclencheur, mettant de côté sans la terminer une de vos pistes alors actives, si vous avez deux pistes. À la fin de ce combat, vous arrêtez de Suivre la piste contre l'ennemi déclencheur pour reprendre la piste originelle, si vous en aviez une.</p>
