--- a/data/feats/class-10-qqe5VmcO1s8iTOfd.htm
+++ b/data/feats/class-10-qqe5VmcO1s8iTOfd.htm
@@ -1,18 +1,14 @@
 Name: Camouflage
 Nom: Camouflage
 PrereqEN: |master in Stealth
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: maître en Discrétion
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You alter your appearance to blend in to the wilderness.
-Avantage: Vous modifiez votre apparence pour vous fondre dans la nature.
------- Benefits and spoiler ----
-Avantage: Vous modifiez votre apparence pour vous fondre dans la nature.
+Avantage: Dans un environnement naturel, vous pouvez Être furtif, même si vous êtes Observé.
+
 ------ Description (en) ------
 <p>You alter your appearance to blend in to the wilderness. In natural terrain, you can @Compendium[pf2e.actionspf2e.VMozDqMMuK5kpoX4]{Sneak} even if you're observed.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> maître en Discrétion</p>
-<hr>
-<p>Vous modifiez votre apparence pour vous fondre dans la nature. Dans un environnement naturel, vous pouvez Être furtif, même si l’on vous observe.</p>
+<p>Vous modifiez votre apparence pour vous fondre dans la nature. Dans un environnement naturel, vous pouvez Être furtif, même si vous êtes Observé.</p>
