--- a/data/feats/class-10-QO8l5Dao8HnaFQE4.htm
+++ b/data/feats/class-10-QO8l5Dao8HnaFQE4.htm
@@ -2,12 +2,11 @@ Name: Impressive Landing
 Nom: Atterrissage impressionnant
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You slam into the ground, shattering it around you.
-Avantage: Vous frappez le sol, le faisant voler en éclats autour de vous.
+Avantage: Une chute de 3 m sur un sol solide crée un terrain difficile autour de vous, blesse les créatures alentour et les Prend au dépourvu.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> You fall at least 10 feet and land on a solid surface.</p>
@@ -15,5 +14,5 @@ Avantage: Vous frappez le sol, le faisant voler en éclats autour de vous.
 <p>You slam into the ground, shattering it around you. Treat the fall as 10 feet shorter. You land on your feet. All adjacent spaces become difficult terrain, and creatures in those spaces when you land take 5 bludgeoning damage as the debris hits them and are @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Flat-Footed} until the start of their next turn.</p>
 ------ Description (fr) ------
 <p><strong>Déclencheur</strong> Vous tombez d'au moins 3 m et atterrissez sur une surface solide</p>
-<hr>
-<p>Vous frappez sur le sol, le brisant autour de vos. Traitez la chute comme si elle était plus courte de 3 m. Vous atterrissez sur vos pieds. Toutes les cases adjacentes deviennent un terrain difficile et les créatures dans ces cases lorsque vous atterrissez subissent 5 dégâts contondants lorsque les débris les touchent et sont <a class="entity-link" data-pack="pf2e.conditionitems" data-id="AJh5ex99aV6VTggg" draggable="true"><i class="fas fa-book-open"></i>Prises au dépourvu</a> jusqu'au début de leur prochain tour.</p>
+<hr />
+<p>Vous frappez le sol, le brisant autour de vous. Traitez la chute comme si elle était plus courte de 3 m. Vous atterrissez sur vos pieds. Toutes les cases adjacentes deviennent un terrain difficile et les créatures dans ces cases lorsque vous atterrissez subissent 5 dégâts contondants lorsque les débris les touchent et sont @Compendium[pf2e.conditionitems.AJh5ex99aV6VTggg]{Prises au dépourvu} jusqu'au début de leur prochain tour.</p>
