--- a/data/feats/class-10-R40U8hF0hWyRUze8.htm
+++ b/data/feats/class-10-R40U8hF0hWyRUze8.htm
@@ -2,16 +2,15 @@ Name: Through Spell
 Nom: Sort traversant
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Spells you cast can transform briefly into vital essence, traveling harmlessly through living and undead creatures between you and your target, blocked only by solid objects.
-Avantage: Les sorts que vous lancez peuvent se transformer brièvement en essence vitale, voyageant sans danger à travers les créatures vivantes et mortes-vivantes entre vous et votre cible, bloqués uniquement par des objets solides.
+Avantage: Vos attaques de sorts ignorent les abris fournis par des créatures.
 
 ------ Description (en) ------
 <p>Spells you cast can transform briefly into vital essence, traveling harmlessly through living and undead creatures between you and your target, blocked only by solid objects.</p>
 <p>If the next action you use is to @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Cast a Spell} that requires a spell attack roll, your targets don't benefit from cover provided by living or undead creatures.</p>
 ------ Description (fr) ------
-<p>Les sort que vous lancez se transforment brièvement en essence vitale, voyageant sans leur faire de mal à travers les créatures vivantes et mort-vivantes entre vous et votre cible, bloqué seulement par des objets solides.</p>
-<p>Si la prochaine action que vous utilisez est de <a class="entity-link" data-pack="pf2e.actionspf2e" data-id="aBQ8ajvEBByv45yz" draggable="true"><i class="fas fa-suitcase"></i>Lancer un sort</a> qui nécessite un jet d'attaue de sort, vos cibles ne bénéficient pas d'un abri procuré par des créatures vivantes ou mort-vivantes.</p>
+<p>Les sort que vous lancez se transforment brièvement en essence vitale, voyageant sans leur faire de mal à travers les créatures vivantes et mort-vivantes entre vous et votre cible, bloqués seulement par des objets solides.</p>
+<p>Si la prochaine action que vous utilisez est de @Compendium[pf2e.actionspf2e.aBQ8ajvEBByv45yz]{Lancer un sort} qui nécessite un jet d'attaque de sort, vos cibles ne bénéficient pas d'un abri procuré par des créatures vivantes ou mort-vivantes.</p>
