--- a/data/feats/class-10-RWccAJJ2PaOI0Byp.htm
+++ b/data/feats/class-10-RWccAJJ2PaOI0Byp.htm
@@ -1,17 +1,14 @@
 Name: Litany Against Sloth
 Nom: Litanie contre la paresse
 PrereqEN: devotion spells|tenets of good
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: principes du bien|sorts de dévotion
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You rail against the sin of sloth, turning a foe’s laziness against it.
-Avantage: Vous vous insurgez contre le péché de paresse, en retournant la paresse de l'ennemi contre lui.
+Avantage: Vous obtenez le sort de dévotion Litanie contre la paresse.
 
 ------ Description (en) ------
 <p>You rail against the sin of sloth, turning a foe's laziness against it. You can cast the @Compendium[pf2e.spells-srd.2mVW1KT3AjW2pvDO]{Litany against Sloth} devotion spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong>  principes du bien, sorts de dévotion</p>
-<hr>
-<p>Vous condamnez le péché de paresse, en retournant la fainéantise d’un adversaire contre lui. Vous pouvez lancer le sort de dévotion litanie contre la paresse. Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
+<p>Vous condamnez le péché de paresse, en retournant la fainéantise d’un adversaire contre lui. Vous pouvez lancer le sort de dévotion Litanie contre la paresse. Augmentez de 1 le nombre de points de focalisation de votre réserve.</p>
