--- a/data/feats/class-10-SlMkuKMny7hWdNxL.htm
+++ b/data/feats/class-10-SlMkuKMny7hWdNxL.htm
@@ -2,16 +2,15 @@ Name: Derring-do
 Nom: Bravoure
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: When you compound panache with even more derring-do, it somehow tends to work out.
-Avantage: Lorsque vous combinez le panache avec encore plus de bravoure, ça a tendance à marcher.
+Avantage: Avoir du panache vous permet de lancer deux fois les dés sur les tests pour lesquels le bonus de circonstances lié au fait d'avoir du panache s'applique.
 
 ------ Description (en) ------
 <p>When you compound @Compendium[pf2e.classfeatures.LzYi0OuOoypNb6jd]{Panache} with even more derring-do, it somehow tends to work out.</p>
 <p>When you already have panache, you can roll twice and use the higher result on checks to which the circumstance bonus for having panache applies (@Compendium[pf2e.actionspf2e.21WIfSu7Xd7uKqV8]{Tumble Through} and any skill actions listed in your swashbuckler's style).</p>
 ------ Description (fr) ------
-<p>Lorsque vous combinez <a class="entity-link" data-pack="pf2e.classfeatures" data-id="LzYi0OuOoypNb6jd" draggable="true"><i class="fas fa-suitcase"></i>Panache</a> avec encore davantage de bravoure, cela tend à résoudre quelque chose.</p>
-<p>Lorsque vous avez déjà du panache, vous pouvez lancer deux fois les dés et utiliser le plus haut résultat sur les tests pour lesquels le bonus de circonstance lié au fait d'avoir du panache s'applique (<a class="entity-link" data-pack="pf2e.actionspf2e" data-id="21WIfSu7Xd7uKqV8" draggable="true"><i class="fas fa-suitcase"></i>Déplacement acrobatique</a> et toutes les actions de compétences listées dans votre style de bretteur).</p>
+<p>Lorsque vous combinez @Compendium[pf2e.classfeatures.LzYi0OuOoypNb6jd]{Panache} avec encore davantage de bravoure, cela tend à mieux fonctionner.</p>
+<p>Lorsque vous avez déjà du panache, vous pouvez lancer deux fois les dés et utiliser le plus haut résultat sur les tests pour lesquels le bonus de circonstances lié au fait d'avoir du panache s'applique (@Compendium[pf2e.actionspf2e.21WIfSu7Xd7uKqV8]{Déplacement acrobatique} et toutes les actions de compétences listées dans votre style de bretteur).</p>
