--- a/data/feats/class-10-pVLdMOqYwul745k3.htm
+++ b/data/feats/class-10-pVLdMOqYwul745k3.htm
@@ -2,12 +2,11 @@ Name: Knockback
 Nom: Repousser
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: The weight of your swing drives your enemy back.
-Avantage: Le poids de votre swing fait reculer votre ennemi.
+Avantage: Une Frappe réussie Pousse votre adversaire de 1,5 m et vous permet d'avancer.
 
 ------ Description (en) ------
 <p><strong>Requirements</strong> Your last action was a successful Strike</p>
@@ -15,5 +14,5 @@ Avantage: Le poids de votre swing fait reculer votre ennemi.
 <p>The weight of your swing drives your enemy back. You push the foe back 5 feet, with the effects of a successful Shove. You can follow the foe as normal for a successful Shove.</p>
 ------ Description (fr) ------
 <p><strong>Conditions</strong> Votre dernière action est une Frappe réussie</p>
-<hr>
+<hr />
 <p>La puissance de votre coup fait reculer votre ennemi. Vous repoussez votre ennemi de 1,50 m, avec les mêmes effets que si vous l’aviez Poussé. Vous pouvez alors suivre l’ennemi, comme si vous aviez réussi à le Pousser.</p>
