--- a/data/feats/class-10-qKpaZF0U9VV0YwTJ.htm
+++ b/data/feats/class-10-qKpaZF0U9VV0YwTJ.htm
@@ -2,16 +2,13 @@ Name: Litany Of Self-Interest
 Nom: Litanie d'égoïsme
 PrereqEN: devotion spells|tenets of evil
 PrereqFR: sorts de dévotion|principes du mal
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You compel a creature to act toward its own ends rather than consider others.
-Avantage: Vous contraignez une créature à agir selon ses propres fins plutôt que de considérer les autres.
+Avantage: Vous obtenez le sort de dévotion Litanie d'égoïsme.
 
 ------ Description (en) ------
 <p>You compel a creature to act toward its own ends rather than consider others. You can cast the @Compendium[pf2e.spells-srd.mm3hZ6jgaJaKK16n]{Litany of Self-Interest} devotion spell. Increase the number of Focus Points in your focus pool by 1.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> préceptes du mal, sorts de dévotion</p>
-<hr />
 <p>Vous obligez une créature à agir à ses propres fins plutôt que de considérer ceux des autres. Vous pouvez lancer le sort de dévotion @Compendium[pf2e.spells-srd.mm3hZ6jgaJaKK16n]{Litanie d'égoïsme}. Augmentez le nombre de Points de focalisation de votre réserve de focalisation de 1.</p>
