--- a/data/equipment/consumable-10-ORDaAzMZLrf6Hn8A.htm
+++ b/data/equipment/consumable-10-ORDaAzMZLrf6Hn8A.htm
@@ -1,14 +1,12 @@
 Name: Antiplague (Greater)
 Nom: Antimaladie (supérieur)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><strong>Activate</strong> <span class="pf2-icon">A</span> Interact</p>
 <p>Antiplague can fortify the body's defenses against diseases. Upon drinking an antiplague, you gain a +4 item bonus to Fortitude saving throws against diseases for 24 hours; this applies to your daily save against a disease's progression.</p>
 <p>@Compendium[pf2e.consumable-effects.R106i7WCXvHLGMTu]{Effect: Antiplague (Greater)}</p>
 ------ Description (fr) ------
-<p><strong>Activation</strong> <span style="font-family: 'Pathfinder2eActions'; font-size: 1.8em; display: inline;">A</span> Interagir</p>
-<p><span>L’antimaladie renforce les défenses du corps contre les maladies. Lorsque vous le buvez, vous recevez un bonus d’objet aux jets de Vigueur contre les maladies pendant 24 heures. Cela s’applique aussi à vos jets de sauvegarde contre la progression d’une maladie. </span></p>
-<p><span>Vous gagnez un bonus d’objet de +4</span></p>
-<p>@Compendium[pf2e.consumable-effects.R106i7WCXvHLGMTu]{Effect: Antimaladie (Supérieur)}</p>
+<p><strong>Activation</strong> <span class="pf2-icon">A</span> Interagir</p>
+<p>L’antimaladie renforce les défenses du corps contre les maladies. Lorsque vous le buvez, vous recevez un bonus d’objet +4 aux jets de Vigueur contre les maladies pendant 24 heures. Cela s’applique aussi à vos jets de sauvegarde contre la progression d’une maladie.</p>
+<p>@Compendium[pf2e.consumable-effects.R106i7WCXvHLGMTu]{Effect: Antimaladie (supérieur)}</p>
