--- a/data/equipment/consumable-01-VeCNWhvEr82ZNoSV.htm
+++ b/data/equipment/consumable-01-VeCNWhvEr82ZNoSV.htm
@@ -1,7 +1,6 @@
 Name: Lastwall Soup
 Nom: Soupe de Dernier-Rempart
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Description (en) ------
 <p><strong>Activate</strong> 1 minute (Interact)</p>
