dons de classe 10

--- a/data/feats/class-10-SYVM6Z3sS50e5Vbd.htm
+++ b/data/feats/class-10-SYVM6Z3sS50e5Vbd.htm
@@ -2,14 +2,13 @@ Name: Deny Support
 Nom: Dénier le soutien
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Keep opponents from flanking when you Feint them.
-Avantage: Empêcher les adversaires de prendre le flanc lorsque vous les Feint.
+Avantage: Feinter un adversaire l'empêche de prendre quiconque en tenaille.
 SpoilersEN: Agents of Edgewatch
-SpoilersFR: 
+SpoilersFR: Agents de la Garde du précipice
 
 ------ Description (en) ------
 <p><strong>Access</strong> Help either the Washboard Dogs or the Diobel Sweepers destroy their rival.<br /></p>
@@ -17,5 +16,5 @@ SpoilersFR:
 <p>When you succeed or critically succeed at a Deception check to @Compendium[pf2e.actionspf2e.QNAVeNKtHA0EUw4X]{Feint} an opponent, that target can't flank with their allies until the beginning of your next turn.</p>
 ------ Description (fr) ------
 <p><strong>Accès</strong> Aider soit les Chiens de la laverie ou les balayeurs de Diobel à détruire leur rival.</p>
-<hr>
-<p>Lorsque vous obtenez un succès ou un succès critique à un test de Duperie pour <a class="entity-link" draggable="true" data-pack="pf2e.actionspf2e" data-id="QNAVeNKtHA0EUw4X"><i class="fas fa-suitcase"></i>Feinter</a> un adversaire, cette cible ne peut pas faire une tenaille avec ses alliés jusqu'au début de votre prochain tour.</p>
+<hr />
+<p>Lorsque vous obtenez un succès ou un succès critique à un test de Duperie pour @Compendium[pf2e.actionspf2e.QNAVeNKtHA0EUw4X]{Feinter} un adversaire, cette cible ne peut pas faire une tenaille avec ses alliés jusqu'au début de votre prochain tour.</p>
