--- a/data/feats/class-10-tXNfWDa6P7bCKrCt.htm
+++ b/data/feats/class-10-tXNfWDa6P7bCKrCt.htm
@@ -2,12 +2,11 @@ Name: Overwhelming Energy
 Nom: Énergie écrasante
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: You alter your spells to overcome resistances.
-Avantage: Vous modifiez vos sorts pour surmonter les résistances.
+Avantage: Vos sorts qui infligent des dégâts d'énergie surmontent les résistances.
 
 ------ Description (en) ------
 <p>(Druid) With a complex gesture, you call upon the primal power of your spell to overcome enemies' resistances.</p>
@@ -19,4 +18,5 @@ Avantage: Vous modifiez vos sorts pour surmonter les résistances.
 <p>(Druide) D’un geste complexe, vous manipulez la puissance primordiale de votre sort pour surmonter les résistances de vos ennemis.</p>
 <p>(Ensorceleur) Vous altérez vos sorts pour surpasser les résistances.</p>
 <p>(Magicien) Avec un geste compliqué, vous altérez l'énergie de votre sort pour sumonter les résistances.</p>
-<p>Si votre prochaine action consiste à Lancer un sort, ce dernier ignore chez la cible un nombre de points de résistance à l’acide, au froid, à l’électricité, au feu ou au son égal à votre niveau. Cela s’applique à tous les dégâts qu’inflige le sort, y compris les dégâts persistants et ceux causés par un effet continu du sort, comme le mur de mur de feu. Cela n’affecte pas les immunités d’une créature.</p>
+<hr />
+<p>Si votre prochaine action consiste à Lancer un sort, ce dernier ignore chez la cible un nombre de points de résistance à l’acide, au froid, à l’électricité, au feu ou au son égal à votre niveau. Cela s’applique à tous les dégâts qu’inflige le sort, y compris les dégâts persistants et ceux causés par un effet continu du sort, comme le mur créé par Mur de feu. Cela n’affecte pas les immunités d’une créature.</p>
