--- a/data/feats/class-10-u2fgdFIdQDplKOS3.htm
+++ b/data/feats/class-10-u2fgdFIdQDplKOS3.htm
@@ -1,21 +1,18 @@
 Name: Peafowl Strut
 Nom: Pavane du paon
 PrereqEN: |Peafowl Stance
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: Posture du paon
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You slowly move across the battlefield with dangerous grace.
-Avantage: Vous vous déplacez lentement sur le champ de bataille avec une grâce dangereuse.
------- Benefits and spoiler ----
-Avantage: Vous vous déplacez lentement sur le champ de bataille avec une grâce dangereuse.
+Avantage: Vous Faites un pas deux fois avant de Frapper avec votre épée.
+
 ------ Description (en) ------
 <p><strong>Requirements</strong> You are in @Compendium[pf2e.feats-srd.C3MgEkPNaIhTddbr]{Peafowl Stance}.</p>
 <hr />
 <p>You slowly move across the battlefield with dangerous grace. Step twice and then Strike. The Strike must be made with the sword required by Peafowl Stance.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.C3MgEkPNaIhTddbr]{Posture du paon}</p>
 <p><strong>Conditions</strong> Vous êtes dans la Posture du paon.</p>
 <hr />
 <p>Vous vous déplacez lentement à travers le champ de bataille avec une grace dangereuse. @Compendium[pf2e.actionspf2e.UHpkTuCtyaPqiCAB]{Faites un pas} deux fois et @Compendium[pf2e.actionspf2e.VjxZFuUXrCU94MWR]{Frappez}. La Frappe doit être faite avec l'épée requise par la Posture du paon.</p>
