--- a/data/feats/class-10-tCuMXQ0yMrCNwzqW.htm
+++ b/data/feats/class-10-tCuMXQ0yMrCNwzqW.htm
@@ -1,19 +1,17 @@
 Name: Resilient Touch
 Nom: Toucher de résilience
 PrereqEN: devotion spell (lay on hands)
-PrereqFR: 
-État: changé
-État d'origine: libre
+PrereqFR: sort de dévotion (Imposition des mains)
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: Your healing energies create an aura of protection that defends your allies against more than just blades and arrows.
-Avantage: Vos énergies de guérison créent une aura de protection qui défend vos alliés contre bien plus que les lames et les flèches.
+Avantage: Votre Imposition des mains accorde un bonus de statut de +1 aux jets de sauvegarde.
 
 ------ Description (en) ------
 <p>Your healing energies create an aura of protection that defends your allies against more than just blades and arrows.</p>
 <p>An ally that recovers Hit Points from your @Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]{Lay on Hands} gains a +1 status bonus to their saving throws until the end of their next turn.</p>
 <p>@Compendium[pf2e.spell-effects.6embuvXCpS3YOD5u]{Spell Effect: Resilient Touch}</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> sort de dévotion (Imposition des mains)</p>
-<hr>
-<p>Vos énergies curatrices créent une aura de protection qui défend vos alliés contre davantage que les lames et les flêches. Un allié qui récupère des Points de vie de votre <a class="entity-link" data-pack="pf2e.spells-srd" data-id="zNN9212H2FGfM7VS" draggable="true"><i class="fas fa-suitcase"></i>Imposition des mains</a> obtien un bonus de statut de +1 à leurs jets de sauvegarde jusqu'à la fin de leur prochain tour.</p>
+<p>Vos énergies curatives créent une aura de protection qui protège vos alliés contre bien davantage que les lames et les flêches.</p>
+<p>Un allié qui récupère des Points de vie de votre @Compendium[pf2e.spells-srd.zNN9212H2FGfM7VS]{Imposition des mains} obtient un bonus de statut de +1 à ses jets de sauvegarde jusqu'à la fin de leur prochain tour.</p>
