--- a/data/feats/class-10-tSmd0cxq9wokSCh4.htm
+++ b/data/feats/class-10-tSmd0cxq9wokSCh4.htm
@@ -1,18 +1,15 @@
 Name: Castigating Weapon
 Nom: Arme Punitive
 PrereqEN: Holy Castigation
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: Punition sacrée
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: The force of your deity’s castigation strengthens your body so you can strike down the wicked.
-Avantage: La force de la fustigation de votre divinité renforce votre corps afin que vous puissiez frapper les méchants.
+Avantage: Après avoir lancé Guérison pour blesser les fiélons, vous înfligez des dégâts bons à vos prochaines Frappes. 
 
 ------ Description (en) ------
 <p>The force of your deity's castigation strengthens your body so you can strike down the wicked.</p>
 <p>After you damage a fiend using a @Compendium[pf2e.spells-srd.rfZpqmj0AIIdkVIs]{Heal} spell, your weapon or unarmed Strikes deal extra good damage to fiends equal to half the level of the heal spell until the end of your next turn. This is cumulative with any good damage the weapon already deals (such as from a holy rune).</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong> @Compendium[pf2e.feats-srd.142QRyK2aPIrJu48]{Punition sacrée}</p>
-<hr>
-<p>La force punitive de votre divinité renforce votre corps pour que vous puissiez abattre les créatures malfaisantes. Après avoir blessé un fiélon avec une guérison, vos Frappes avec une arme ou à mains nues infligent aux fiélons, jusqu’à la fin de votre prochain tour, un montant de dégâts bons supplémentaires égal à la moitié du niveau de la guérison. Ces dégâts se cumulent avec les éventuels dégâts bons que l’arme inflige déjà (avec une rune sainte, par exemple).</p>
+<p>La force punitive de votre divinité renforce votre corps pour que vous puissiez abattre les créatures malfaisantes. Après avoir blessé un fiélon avec Guérison, vos Frappes avec une arme ou à mains nues infligent aux fiélons, jusqu’à la fin de votre prochain tour, un montant de dégâts bons supplémentaires égal à la moitié du niveau de Guérison. Ces dégâts se cumulent avec les éventuels dégâts bons que l’arme inflige déjà (avec une rune sainte, par exemple).</p>
