--- a/data/feats/class-10-tY3Zg0l14CdoKPpt.htm
+++ b/data/feats/class-10-tY3Zg0l14CdoKPpt.htm
@@ -2,12 +2,11 @@ Name: Unstable Concoction
 Nom: Concoction instable
 PrereqEN: 
 PrereqFR: 
-État: changé
-État d'origine: libre
+État: libre
 
 ------ Benefits and spoiler ----
 Benefits: You can create extraordinary—albeit volatile—alchemical wonders, though they have an unfortunate tendency to violently explode when you use them.
-Avantage: Vous pouvez créer des merveilles chimiques extraordinaires, bien que volatiles, mais elles ont une fâcheuse tendance à exploser violemment lorsque vous les utilisez.
+Avantage: Alchimie rapide vous permet de créer des objets de niveau supérieur au risque qu'ils vous blessent.
 
 ------ Description (en) ------
 <p>You can create extraordinary-albeit volatile-alchemical wonders, though they have an unfortunate tendency to violently explode when you use them.</p>
@@ -15,5 +14,5 @@ Avantage: Vous pouvez créer des merveilles chimiques extraordinaires, bien que 
 <p>Upon activating the item, attempt a DC 10 flat check; for every additional batch of @Compendium[pf2e.classfeatures.wySB9VHOW1v3TX1L]{Infused Reagents} you spent to create the item, reduce this DC by 2. On a success, the item functions normally. On a failure, the item explodes, dealing force damage to the user equal to twice the item's level (doubled on a critical failure).</p>
 ------ Description (fr) ------
 <p>Vous pouvez créer des merveilles chimiques extraordinaires, quoique volatiles, bien qu'elles aient une fâcheuse tendance à exploser violemment lorsque vous les utilisez.</p>
-<p>Lorsque vous utilisez <a class="entity-link" data-pack="pf2e.feats-srd" data-id="NlEZ0piDxg9buXCL" draggable="true"><i class="fas fa-suitcase"></i> Alchimie rapide</a>, vous pouvez créer un objet alchimique de votre formulaire dont le level est au maximum de 2 de plus que votre niveau d'alchimie avancée. Vous pouvez fabriquer jusqu'à 3 lots de <a class="entity-link" data-pack="pf2e.classfeatures" data-id="wySB9VHOW1v3TX1L" draggable="true"><i class="fas fa-suitcase"></i> réactifs infusés</a> supplémentaires lorsque vous crées cet objet pour le stabiliser.</p>
-<p>En activant l'objet, faites un test nu contre un DD 10 ; pour chaque lot supplémentaire de <a class="entity-link" data-pack="pf2e.classfeatures" data-id="wySB9VHOW1v3TX1L" draggable="true"><i class="fas fa-suitcase"></i>réactifs infusés</a> dépensés pour créer l'objet réduisez ce DD de 2. En cas de succès, l'objet fonctionne normalement. En cas d'échec, l'objet explose, infligeant des dégâts de force à l'utilsiateur égal à deux fois le niveau de l'objet (doublés sur une échec critique).</p>
+<p>Lorsque vous utilisez @Compendium[pf2e.feats-srd.NlEZ0piDxg9buXCL]{Alchimie rapide}, vous pouvez créer un objet alchimique de votre formulaire dont le niveau est au maximum supérieur de 2 de plus que votre niveau d'alchimie avancée. Vous pouvez dépenser jusqu'à 3 lots de réactifs imprégnés supplémentaires lorsque vous créez cet objet pour le stabiliser.</p>
+<p>En activant l'objet, faites un test nu contre un DD 10 ; pour chaque lot supplémentaire de réactifs infusés dépensés pour créer l'objet réduisez le DD de 2. En cas de succès, l'objet fonctionne normalement. En cas d'échec, l'objet explose, infligeant des dégâts de force à l'utilisateur égaux à deux fois le niveau de l'objet (doublés sur un échec critique).</p>
