--- a/data/equipment/consumable-06-Ru4xaA4kjdZ4IFS5.htm
+++ b/data/equipment/consumable-06-Ru4xaA4kjdZ4IFS5.htm
@@ -1,7 +1,6 @@
 Name: Oil of Weightlessness (Greater)
 Nom: Huile d'apesanteur (supérieure)
-État: changé
-État d'origine: officielle
+État: officielle
 
 ------ Description (en) ------
 <p><span>You can spread this shimmering oil on an item of 2 Bulk or less to make it feel weightless. It has negligible Bulk for 8 hours. </span></p>
