dons de classe 10

--- a/data/feats/class-10-VsTmB32x9673ONJ0.htm
+++ b/data/feats/class-10-VsTmB32x9673ONJ0.htm
@@ -1,20 +1,18 @@
 Name: Shield of Reckoning
 Nom: Bouclier du jugement
 PrereqEN: champion's reaction|divine ally (shield)|tenets of good|Shield Warden
-PrereqFR: 
-État: changé
-État d'origine: officielle
+PrereqFR: allié divin (bouclier)|Gardien au bouclier|principes du bien|réaction de champion
+État: officielle
 
 ------ Benefits and spoiler ----
 Benefits: When you shield your ally against an attack, you call upon your power to protect your ally further.
-Avantage: Lorsque vous protégez votre allié contre une attaque, vous faites appel à votre pouvoir pour protéger davantage votre allié.
+Avantage: Vous pouvez appliquer à la fois la réaction Blocage au bouclier et votre réaction de Champion.
 
 ------ Description (en) ------
 <p><strong>Trigger</strong> A foe's attack against an ally matches the trigger for both your Shield Block reaction and your champion's reaction</p>
 <hr />
 <p>When you shield your ally against an attack, you call upon your power to protect your ally further. You use the Shield Block reaction to prevent damage to an ally and also use your champion's reaction against the foe that attacked your ally.</p>
 ------ Description (fr) ------
-<p><strong>Prérequis</strong>  allié divin (bouclier), Gardien au bouclier, principes du bien, réaction de champion</p>
 <p><strong>Déclencheur</strong> L’attaque d’un adversaire contre un allié déclenche à la fois votre réaction Blocage au bouclier et votre réaction de champion</p>
-<hr>
+<hr />
 <p>Quand vous protégez votre allié avec votre bouclier contre une attaque, vous invoquez votre puissance pour améliorer la protection. Vous effectuez la réaction Blocage au bouclier pour bloquer les dégâts que devrait subir un allié et vous effectuez également votre réaction de champion contre l’adversaire qui l’a attaqué.</p>
